unwanted links replaced

--- a/l10n/ses/de-de/xml/admin_ceph_iscsi.xml
+++ b/l10n/ses/de-de/xml/admin_ceph_iscsi.xml
@@ -38,7 +38,7 @@
     </listitem>
    </itemizedlist>
    <para>
-    Wenn Ihr Initiator-Host SUSE Linux Enterprise Server ausführt, sehen Sie sich die detaillierten Informationen unter <link xlink:href="https://documentation.suse.com/sles/15-SP1/single-html/SLES-storage/#sec-iscsi-initiator"/> an, um zu erfahren, wie Sie eine Verbindung zu einem iSCSI-Ziel herstellen.
+    Wenn Ihr Initiator-Host SUSE Linux Enterprise Server ausführt, sehen Sie sich die detaillierten Informationen unter <link xlink:href="https://documentation.suse.com/sles/15-SP2/html/SLES-all/cha-iscsi.html#sec-iscsi-initiator"/> an, um zu erfahren, wie Sie eine Verbindung zu einem iSCSI-Ziel herstellen.
    </para>
    <para>
     Fahren Sie bei allen anderen Linux-Distributionen, die <systemitem>open-iscsi</systemitem> unterstützen, damit fort, Ziele in Ihrem <systemitem class="daemon">ceph-iscsi</systemitem>-Gateway zu ermitteln (in diesem Beispiel verwenden wir „iscsi1.example.com“ als Portaladresse. Wiederholen Sie für einen Multipfadzugriff diese Schritte mit „iscsi2.example.com“):
