--- a/l10n/ses/de-de/xml/admin_ceph_kvm.xml
+++ b/l10n/ses/de-de/xml/admin_ceph_kvm.xml
@@ -11,7 +11,7 @@
   Der häufigste Anwendungsfall von Ceph ist die Bereitstellung von Blockgeräte-Images für virtuelle Maschinen. Ein Benutzer erstellt beispielsweise ein Klon-Image („Golden Image“) mit Betriebssystem und der relevanten Software in einer idealen Konfiguration. Dann erstellt der Benutzer einen Snapshot des Image. Schließlich klont der Benutzer den Snapshot (normalerweise viele Male, weitere detaillierte Informationen finden Sie in <xref linkend="cha-ceph-snapshots-rbd"/>). Die Fähigkeit zum Erstellen von Klonen aus Snapshots durch Kopien beim Schreibvorgang bedeutet, dass Ceph schnell Blockgeräte-Images für virtuelle Maschinen bereitstellen kann, weil der Client nicht bei jeder Erstellung einer neuen virtuellen Maschine ein gesamtes Image herunterladen muss.
  </para>
  <para>
-  Ceph-Blockgeräte können in virtuelle QEMU-Maschinen integriert werden. Weitere Informationen zu QEMU KVM finden Sie unter <link xlink:href="https://documentation.suse.com/sles/15-SP1/single-html/SLES-virtualization/#part-virt-qemu"/>.
+  Ceph-Blockgeräte können in virtuelle QEMU-Maschinen integriert werden. Weitere Informationen zu QEMU KVM finden Sie unter <link xlink:href="https://documentation.suse.com/sles/15-SP2/html/SLES-all/part-virt-qemu.html"/>.
  </para>
  <sect1 xml:id="ceph-kvm-install">
   <title>Installieren von <systemitem>qemu-block-rbd</systemitem></title>
