--- a/l10n/ses/de-de/xml/admin_ceph_upgrade.xml
+++ b/l10n/ses/de-de/xml/admin_ceph_upgrade.xml
@@ -50,12 +50,12 @@
   <itemizedlist>
    <listitem>
     <para>
-     Die OSD-Migration von FileStore zu BlueStore <emphasis>muss</emphasis> vor dem Upgrade erfolgen, da FileStore in SUSE Enterprise Storage 7 nicht unterstützt wird. Weitere Details zu BlueStore und zur Migration von FileStore finden Sie unter <link xlink:href="https://documentation.suse.com/ses/6/single-html/ses-deployment/#filestore2bluestore"/>.
+     Die OSD-Migration von FileStore zu BlueStore <emphasis>muss</emphasis> vor dem Upgrade erfolgen, da FileStore in SUSE Enterprise Storage 7 nicht unterstützt wird. Weitere Details zu BlueStore und zur Migration von FileStore finden Sie unter <link xlink:href="https://documentation.suse.com/ses/6/html/ses-all/cha-ceph-upgrade.html#filestore2bluestore"/>.
     </para>
    </listitem>
    <listitem>
     <para>
-     Wenn Sie einen älteren Cluster ausführen, der noch <literal>ceph-disk</literal>-OSDs verwendet, <emphasis>müssen</emphasis> Sie vor dem Upgrade auf <literal>ceph-volume</literal> umstellen. Weitere Informationen finden Sie in <link xlink:href="https://documentation.suse.com/ses/6/single-html/ses-deployment/#upgrade-osd-deployment"/>.
+     Wenn Sie einen älteren Cluster ausführen, der noch <literal>ceph-disk</literal>-OSDs verwendet, <emphasis>müssen</emphasis> Sie vor dem Upgrade auf <literal>ceph-volume</literal> umstellen. Weitere Informationen finden Sie in <link xlink:href="https://documentation.suse.com/ses/6/html/ses-all/cha-ceph-upgrade.html#upgrade-osd-deployment"/>.
     </para>
    </listitem>
   </itemizedlist>
@@ -143,7 +143,7 @@
   <sect2 xml:id="upgrade-backup-config-data">
    <title>Sichern der Cluster-Konfiguration und -Daten</title>
    <para>
-    Wir empfehlen dringend, vor Beginn des Upgrades auf SUSE Enterprise Storage 7 alle Cluster-Konfigurationen und -Daten zu sichern. Eine Anleitung zur Sicherung aller Daten finden Sie unter <link xlink:href="https://documentation.suse.com/ses/6/single-html/ses-admin/#cha-deployment-backup"/>.
+    Wir empfehlen dringend, vor Beginn des Upgrades auf SUSE Enterprise Storage 7 alle Cluster-Konfigurationen und -Daten zu sichern. Eine Anleitung zur Sicherung aller Daten finden Sie unter <link xlink:href="https://documentation.suse.com/ses/6/html/ses-all/cha-deployment-backup.html"/>.
    </para>
   </sect2>
 
