--- a/l10n/ses/de-de/xml/deployment_admin_ha.xml
+++ b/l10n/ses/de-de/xml/deployment_admin_ha.xml
@@ -46,7 +46,7 @@
   </itemizedlist>
 
   <para>
-   Weitere detaillierte Informationen zu den Cluster-Anforderungen finden Sie in <link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/single-html/SLE-HA-install-quick/#sec-ha-inst-quick-req"/>.
+   Weitere detaillierte Informationen zu den Cluster-Anforderungen finden Sie in <link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/html/SLE-HA-all/art-sleha-install-quick.html#sec-ha-inst-quick-req"/>.
   </para>
 
   <figure>
@@ -71,17 +71,17 @@
   <procedure>
    <step>
     <para>
-     Richten Sie einen einfachen Hochverfügbarkeits-Cluster mit zwei Knoten und gemeinsamem Speicher ein. Eine Beschreibung hierzu finden Sie unter <link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/single-html/SLE-HA-install-quick/#art-sleha-install-quick"/>.
+     Richten Sie einen einfachen Hochverfügbarkeits-Cluster mit zwei Knoten und gemeinsamem Speicher ein. Eine Beschreibung hierzu finden Sie unter <link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/html/SLE-HA-all/art-sleha-install-quick.html"/>.
     </para>
    </step>
    <step>
     <para>
-     Installieren Sie in beiden Cluster-Knoten alle Pakete, die zur Ausführung des KVM-Hypervisors und des <systemitem class="library">libvirt</systemitem>-Toolkits erforderlich sind. Eine Beschreibung hierzu finden Sie unter <link xlink:href="https://documentation.suse.com/sles/15-SP2/single-html/SLES-virtualization/#sec-vt-installation-kvm"/>.
+     Installieren Sie in beiden Cluster-Knoten alle Pakete, die zur Ausführung des KVM-Hypervisors und des <systemitem class="library">libvirt</systemitem>-Toolkits erforderlich sind. Eine Beschreibung hierzu finden Sie unter <link xlink:href="https://documentation.suse.com/sles/15-SP2/html/SLES-all/cha-vt-installation.html#sec-vt-installation-kvm"/>.
     </para>
    </step>
    <step>
     <para>
-     Erstellen Sie im ersten Cluster-Knoten eine neue virtuelle KVM-Maschine und nutzen Sie dazu <systemitem class="library">libvirt</systemitem>. Eine Beschreibung hierzu finden Sie unter <link xlink:href="https://documentation.suse.com/sles/15-SP2/single-html/SLES-virtualization/#sec-libvirt-inst-virt-install"/>. Speichern Sie die Festplatten-Images der VM im vorkonfigurierten gemeinsamen Speicher.
+     Erstellen Sie im ersten Cluster-Knoten eine neue virtuelle KVM-Maschine und nutzen Sie dazu <systemitem class="library">libvirt</systemitem>. Eine Beschreibung hierzu finden Sie unter <link xlink:href="https://documentation.suse.com/sles/15-SP2/html/SLES-all/cha-kvm-inst.html#sec-libvirt-inst-virt-install"/>. Speichern Sie die Festplatten-Images der VM im vorkonfigurierten gemeinsamen Speicher.
     </para>
    </step>
    <step>
@@ -94,7 +94,7 @@
    </step>
    <step>
     <para>
-     Erstellen Sie eine Ressource für die VM des Admin-Knoten. Allgemeine Informationen zum Erstellen von Hochverfügbarkeits-Ressourcen finden Sie unter <link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/single-html/SLE-HA-guide/#cha-conf-hawk2"/>. Detaillierte Informationen zum Erstellen einer Ressource für eine virtuelle KVM-Maschine finden Sie unter <link xlink:href="http://www.linux-ha.org/wiki/VirtualDomain_%28resource_agent%29"/>.
+     Erstellen Sie eine Ressource für die VM des Admin-Knoten. Allgemeine Informationen zum Erstellen von Hochverfügbarkeits-Ressourcen finden Sie unter <link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/html/SLE-HA-all/cha-conf-hawk2.html"/>. Detaillierte Informationen zum Erstellen einer Ressource für eine virtuelle KVM-Maschine finden Sie unter <link xlink:href="http://www.linux-ha.org/wiki/VirtualDomain_%28resource_agent%29"/>.
     </para>
    </step>
    <step>
