--- a/l10n/ses/de-de/xml/deployment_cifs.xml
+++ b/l10n/ses/de-de/xml/deployment_cifs.xml
@@ -182,7 +182,7 @@
     Außerdem können Clients über zwei virtuelle IP-Adressen nach dem Floating-IP-Prinzip eine Verbindung mit dem Service herstellen, und zwar unabhängig davon, auf welchem physischen Knoten er ausgeführt wird. <systemitem class="ipaddress">192.168.1.10</systemitem> wird für die Cluster-Verwaltung mit Hawk2 verwendet und <systemitem class="ipaddress">192.168.2.1</systemitem> exklusiv für die CIFS-Exporte. Dies erleichtert später die Anwendung von Sicherheitsbeschränkungen.
    </para>
    <para>
-    Das folgende Verfahren beschreibt das Installationsbeispiel. Weitere Informationen finden Sie unter <link xlink:href="https://documentation.suse.com/sle-ha/15-SP1/single-html/SLE-HA-install-quick/"/>.
+    Das folgende Verfahren beschreibt das Installationsbeispiel. Weitere Informationen finden Sie unter <link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/html/SLE-HA-all/art-sleha-install-quick.html"/>.
    </para>
    <procedure xml:id="proc-sec-ses-cifs-ha">
     <step>
@@ -196,7 +196,7 @@
     </step>
     <step>
      <para>
-      Für die Einrichtung von SLE-HA ist ein Fencing-Gerät erforderlich, um eine <emphasis>Split Brain</emphasis>-Situation zu verhindern, wenn aktive Cluster-Knoten nicht mehr synchronisiert sind. Zu diesem Zweck können Sie ein Ceph RBD-Image mit Stonith Block Device (SBD) verwenden. Weitere Informationen finden Sie in <link xlink:href="https://documentation.suse.com/sle-ha/15-SP1/single-html/SLE-HA-guide/#sec-ha-storage-protect-fencing-setup"/>.
+      Für die Einrichtung von SLE-HA ist ein Fencing-Gerät erforderlich, um eine <emphasis>Split Brain</emphasis>-Situation zu verhindern, wenn aktive Cluster-Knoten nicht mehr synchronisiert sind. Zu diesem Zweck können Sie ein Ceph RBD-Image mit Stonith Block Device (SBD) verwenden. Weitere Informationen finden Sie in <link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/html/SLE-HA-all/cha-ha-storage-protect.html#sec-ha-storage-protect-fencing-setup"/>.
      </para>
      <para>
       Falls es noch nicht vorhanden ist, erstellen Sie einen RBD-Pool namens <literal>rbd</literal> (weitere Informationen finden Sie in <xref linkend="ceph-pools-operate-add-pool"/>) und verknüpfen Sie ihn mit <literal>rbd</literal> (weitere Informationen finden Sie in <xref linkend="ceph-pools-associate"/>). Erstellen Sie dann ein entsprechendes RBD-Image namens <literal>sbd01</literal>:
@@ -408,7 +408,7 @@ Full list of resources:
 <prompt>crm(live)configure# </prompt><command>order</command> o-with-ctdb 0: cl-ip cl-ctdb
 <prompt>crm(live)configure# </prompt><command>commit</command></screen>
      <para>
-      Wenn <literal>unique_clone_address</literal> auf <literal>true</literal> festgelegt ist, fügt der Ressourcenagent IPaddr2 eine Klon-ID zur angegebenen Adresse hinzu, was zu drei verschiedenen IP-Adressen führt. Diese werden normalerweise nicht benötigt, sind jedoch nützlich beim Lastausgleich. Weitere Informationen zu diesem Thema finden Sie unter <link xlink:href="https://documentation.suse.com/sle-ha/15-SP1/single-html/SLE-HA-guide/#cha-ha-lb"/>.
+      Wenn <literal>unique_clone_address</literal> auf <literal>true</literal> festgelegt ist, fügt der Ressourcenagent IPaddr2 eine Klon-ID zur angegebenen Adresse hinzu, was zu drei verschiedenen IP-Adressen führt. Diese werden normalerweise nicht benötigt, sind jedoch nützlich beim Lastausgleich. Weitere Informationen zu diesem Thema finden Sie unter <link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/html/SLE-HA-all/cha-ha-lb.html"/>.
      </para>
     </step>
     <step>
