--- a/l10n/ses/es-es/xml/admin_ceph_iscsi.xml
+++ b/l10n/ses/es-es/xml/admin_ceph_iscsi.xml
@@ -38,7 +38,7 @@
     </listitem>
    </itemizedlist>
    <para>
-    Si el sistema operativo del host del iniciador es SUSE Linux Enterprise Server, consulte <link xlink:href="https://documentation.suse.com/sles/15-SP1/single-html/SLES-storage/#sec-iscsi-initiator"/> para obtener información sobre cómo conectarse a un destino iSCSI.
+    Si el sistema operativo del host del iniciador es SUSE Linux Enterprise Server, consulte <link xlink:href="https://documentation.suse.com/sles/15-SP2/html/SLES-all/cha-iscsi.html#sec-iscsi-initiator"/> para obtener información sobre cómo conectarse a un destino iSCSI.
    </para>
    <para>
     Para cualquier otra distribución Linux compatible con <systemitem>open-iscsi</systemitem>, descubra los destinos en la pasarela <systemitem class="daemon">ceph-iscsi</systemitem>. En este ejemplo se utiliza iscsi1.example.com como dirección del portal. Para el acceso de múltiples rutas, repita los pasos con iscsi2.example.com:
