--- a/l10n/ses/es-es/xml/admin_ceph_kvm.xml
+++ b/l10n/ses/es-es/xml/admin_ceph_kvm.xml
@@ -11,7 +11,7 @@
   El caso de uso más frecuente de Ceph implica proporcionar imágenes de dispositivo de bloques a máquinas virtuales. Por ejemplo, un usuario puede crear una imagen lista para usar con un sistema operativo y cualquier software relevante en una configuración ideal. A continuación, el usuario toma una instantánea de la imagen. Por último, el usuario clona la instantánea (normalmente muchas veces, consulte la <xref linkend="cha-ceph-snapshots-rbd"/> para más información). La capacidad para crear clones de copia de escritura de una instantánea significa que Ceph puede provisionar imágenes de dispositivos de bloques a máquinas virtuales rápidamente, ya que el cliente no necesita descargar una imagen completa cada vez que invoca una máquina virtual nueva.
  </para>
  <para>
-  Los dispositivos de bloques de Ceph pueden integrarse con máquinas virtuales QEMU. Para obtener más información sobre QEMU KVM, consulte <link xlink:href="https://documentation.suse.com/sles/15-SP1/single-html/SLES-virtualization/#part-virt-qemu"/>.
+  Los dispositivos de bloques de Ceph pueden integrarse con máquinas virtuales QEMU. Para obtener más información sobre QEMU KVM, consulte <link xlink:href="https://documentation.suse.com/sles/15-SP2/html/SLES-all/part-virt-qemu.html"/>.
  </para>
  <sect1 xml:id="ceph-kvm-install">
   <title>Instalación de <systemitem>qemu-block-rbd</systemitem></title>
