--- a/l10n/ses/es-es/xml/admin_ceph_upgrade.xml
+++ b/l10n/ses/es-es/xml/admin_ceph_upgrade.xml
@@ -50,12 +50,12 @@
   <itemizedlist>
    <listitem>
     <para>
-     La migración del OSD de FileStore a BlueStore <emphasis>debe</emphasis> realizarse antes de la actualización, ya que FileStore no es compatible con SUSE Enterprise Storage 7. Encontrará más información sobre BlueStore y sobre cómo migrar desde FileStore en <link xlink:href="https://documentation.suse.com/ses/6/single-html/ses-deployment/#filestore2bluestore"/>.
+     La migración del OSD de FileStore a BlueStore <emphasis>debe</emphasis> realizarse antes de la actualización, ya que FileStore no es compatible con SUSE Enterprise Storage 7. Encontrará más información sobre BlueStore y sobre cómo migrar desde FileStore en <link xlink:href="https://documentation.suse.com/ses/6/html/ses-all/cha-ceph-upgrade.html#filestore2bluestore"/>.
     </para>
    </listitem>
    <listitem>
     <para>
-     Si está ejecutando un clúster antiguo que aún utiliza los OSD de <literal>ceph-disk</literal>, <emphasis>debe</emphasis> cambiar a <literal>ceph-volume</literal> antes de la actualización. Más detalles en <link xlink:href="https://documentation.suse.com/ses/6/single-html/ses-deployment/#upgrade-osd-deployment"/>
+     Si está ejecutando un clúster antiguo que aún utiliza los OSD de <literal>ceph-disk</literal>, <emphasis>debe</emphasis> cambiar a <literal>ceph-volume</literal> antes de la actualización. Más detalles en <link xlink:href="https://documentation.suse.com/ses/6/html/ses-all/cha-ceph-upgrade.html#upgrade-osd-deployment"/>.
     </para>
    </listitem>
   </itemizedlist>
@@ -143,7 +143,7 @@
   <sect2 xml:id="upgrade-backup-config-data">
    <title>Copia de seguridad de la configuración y los datos del clúster</title>
    <para>
-    Se recomienda encarecidamente realizar una copia de seguridad de toda la configuración y los datos del clúster antes de iniciar la actualización a SUSE Enterprise Storage 7. Para obtener instrucciones sobre cómo realizar copias de seguridad de todos los datos, consulte <link xlink:href="https://documentation.suse.com/ses/6/single-html/ses-admin/#cha-deployment-backup"/>.
+    Se recomienda encarecidamente realizar una copia de seguridad de toda la configuración y los datos del clúster antes de iniciar la actualización a SUSE Enterprise Storage 7. Para obtener instrucciones sobre cómo realizar copias de seguridad de todos los datos, consulte <link xlink:href="https://documentation.suse.com/ses/6/html/ses-all/cha-deployment-backup.html"/>.
    </para>
   </sect2>
 
