--- a/l10n/ses/es-es/xml/deploy_cephadm.xml
+++ b/l10n/ses/es-es/xml/deploy_cephadm.xml
@@ -80,7 +80,7 @@
    </step>
    <step>
     <para>
-     Configure los ajustes de red, incluida la resolución de nombre DNS adecuada en cada nodo. Para obtener más información acerca de cómo configurar una red, consulte <link xlink:href="https://documentation.suse.com/sles/15-SP2/single-html/SLES-admin/#sec-network-yast"/>. Para obtener más información sobre cómo configurar un servidor DNS, consulte <link xlink:href="https://documentation.suse.com/sles/15-SP2/single-html/SLES-admin/#cha-dns"/>.
+     Configure los ajustes de red, incluida la resolución de nombre DNS adecuada en cada nodo. Para obtener más información acerca de cómo configurar una red, consulte <link xlink:href="https://documentation.suse.com/sles/15-SP2/html/SLES-all/cha-network.html#sec-network-yast"/>. Para obtener más información sobre cómo configurar un servidor DNS, consulte <link xlink:href="https://documentation.suse.com/sles/15-SP2/html/SLES-all/cha-dns.html"/>.
     </para>
    </step>
   </procedure>
