--- a/l10n/ses/es-es/xml/deployment_cifs.xml
+++ b/l10n/ses/es-es/xml/deployment_cifs.xml
@@ -182,7 +182,7 @@
     Asimismo, dos direcciones IP virtuales flotantes permiten a los clientes conectarse al servicio independientemente del nodo físico en el que se estén ejecutando. <systemitem class="ipaddress">192.168.1.10</systemitem> se usa para la administración del clúster con Hawk2 y <systemitem class="ipaddress">192.168.2.1</systemitem> se usa exclusivamente para las exportaciones CIFS. De esta forma es más fácil aplicar más tarde restricciones de seguridad.
    </para>
    <para>
-    El procedimiento siguiente describe la instalación de ejemplo. Encontrará más información en <link xlink:href="https://documentation.suse.com/sle-ha/15-SP1/single-html/SLE-HA-install-quick/"/>.
+    El procedimiento siguiente describe la instalación de ejemplo. Encontrará más información en <link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/html/SLE-HA-all/art-sleha-install-quick.html"/>.
    </para>
    <procedure xml:id="proc-sec-ses-cifs-ha">
     <step>
@@ -196,7 +196,7 @@
     </step>
     <step>
      <para>
-      La configuración de SLE-HA requiere un dispositivo de aislamiento para evitar una situación de <emphasis>clúster con nodos malinformados</emphasis> cuando los nodos de clúster activos dejen de estar sincronizados. Para ello, puede utilizar una imagen Ceph RBD con un dispositivo de bloques Stonith (SBD). Consulte <link xlink:href="https://documentation.suse.com/sle-ha/15-SP1/single-html/SLE-HA-guide/#sec-ha-storage-protect-fencing-setup"/> para obtener más información.
+      La configuración de SLE-HA requiere un dispositivo de aislamiento para evitar una situación de <emphasis>clúster con nodos malinformados</emphasis> cuando los nodos de clúster activos dejen de estar sincronizados. Para ello, puede utilizar una imagen Ceph RBD con un dispositivo de bloques Stonith (SBD). Consulte <link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/html/SLE-HA-all/cha-ha-storage-protect.html#sec-ha-storage-protect-fencing-setup"/> para obtener más información.
      </para>
      <para>
       Si aún no existe, cree un repositorio RBD denominado <literal>rbd</literal> (consulte la <xref linkend="ceph-pools-operate-add-pool"/>) y asócielo con <literal>rbd</literal> (consulte la <xref linkend="ceph-pools-associate"/>). A continuación, cree una imagen RBD relacionada llamada <literal>sbd01</literal>:
@@ -408,7 +408,7 @@ Full list of resources:
 <prompt>crm(live)configure# </prompt><command>order</command> o-with-ctdb 0: cl-ip cl-ctdb
 <prompt>crm(live)configure# </prompt><command>commit</command></screen>
      <para>
-      Si <literal>unique_clone_address</literal> se define como <literal>true</literal> (verdadero), el agente de recurso IPaddr2 añade un ID de clonación a la dirección especificada, lo que da como resultado que haya tres direcciones IP distintas. Normalmente, no son necesarias, pero ayudan a la hora de equilibrar la carga. Para obtener más información sobre este tema, consulte <link xlink:href="https://documentation.suse.com/sle-ha/15-SP1/single-html/SLE-HA-guide/#cha-ha-lb"/>.
+      Si <literal>unique_clone_address</literal> se define como <literal>true</literal> (verdadero), el agente de recurso IPaddr2 añade un ID de clonación a la dirección especificada, lo que da como resultado que haya tres direcciones IP distintas. Normalmente, no son necesarias, pero ayudan a la hora de equilibrar la carga. Para obtener más información sobre este tema, consulte <link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/html/SLE-HA-all/cha-ha-lb.html"/>.
      </para>
     </step>
     <step>
