--- a/l10n/ses/fr-fr/xml/admin_ceph_iscsi.xml
+++ b/l10n/ses/fr-fr/xml/admin_ceph_iscsi.xml
@@ -38,7 +38,7 @@
     </listitem>
    </itemizedlist>
    <para>
-    Si votre hôte initiateur exécute SUSE Linux Enterprise Server, reportez-vous à la page <link xlink:href="https://documentation.suse.com/sles/15-SP1/single-html/SLES-storage/#sec-iscsi-initiator"/> pour plus de détails sur la façon de se connecter à une cible iSCSI.
+    Si votre hôte initiateur exécute SUSE Linux Enterprise Server, reportez-vous à la page <link xlink:href="https://documentation.suse.com/sles/15-SP2/html/SLES-all/cha-iscsi.html#sec-iscsi-initiator"/> pour plus de détails sur la façon de se connecter à une cible iSCSI.
    </para>
    <para>
     Pour toute autre distribution Linux prenant en charge <systemitem>open-iscsi</systemitem>, poursuivez la découverte des cibles sur votre passerelle <systemitem class="daemon">ceph-iscsi</systemitem> (cet exemple utilise iscsi1.example.com comme adresse de portail ; pour l'accès multipath, répétez ces étapes avec iscsi2.example.com) :
