--- a/l10n/ses/fr-fr/xml/admin_ceph_upgrade.xml
+++ b/l10n/ses/fr-fr/xml/admin_ceph_upgrade.xml
@@ -50,12 +50,12 @@
   <itemizedlist>
    <listitem>
     <para>
-     La migration OSD de FileStore vers BlueStore <emphasis>doit</emphasis> avoir lieu avant la mise à niveau car FileStore n'est pas pris en charge dans SUSE Enterprise Storage 7. Pour plus d'informations sur BlueStore et sur la procédure de migration à partir de FileStore, consultez le site <link xlink:href="https://documentation.suse.com/ses/6/single-html/ses-deployment/#filestore2bluestore"/>.
+     La migration OSD de FileStore vers BlueStore <emphasis>doit</emphasis> avoir lieu avant la mise à niveau car FileStore n'est pas pris en charge dans SUSE Enterprise Storage 7. Pour plus d'informations sur BlueStore et sur la procédure de migration à partir de FileStore, consultez le site <link xlink:href="https://documentation.suse.com/ses/6/html/ses-all/cha-ceph-upgrade.html#filestore2bluestore"/>.
     </para>
    </listitem>
    <listitem>
     <para>
-     Si vous exécutez une grappe plus ancienne qui utilise toujours des OSD <literal>ceph-disk</literal>, vous <emphasis>devez</emphasis> passer à <literal>ceph-volume</literal> avant la mise à niveau. Pour plus de détails, consultez le site <link xlink:href="https://documentation.suse.com/ses/6/single-html/ses-deployment/#upgrade-osd-deployment"/>.
+     Si vous exécutez une grappe plus ancienne qui utilise toujours des OSD <literal>ceph-disk</literal>, vous <emphasis>devez</emphasis> passer à <literal>ceph-volume</literal> avant la mise à niveau. Pour plus de détails, consultez le site <link xlink:href="https://documentation.suse.com/ses/6/html/ses-all/cha-ceph-upgrade.html#upgrade-osd-deployment"/>.
     </para>
    </listitem>
   </itemizedlist>
@@ -143,7 +143,7 @@
   <sect2 xml:id="upgrade-backup-config-data">
    <title>Sauvegarde de la configuration et des données de grappe</title>
    <para>
-    Nous vous recommandons vivement de sauvegarder l'ensemble de la configuration et des données de la grappe avant la mise à niveau vers SUSE Enterprise Storage 7. Pour savoir comment sauvegarder toutes vos données, consultez <link xlink:href="https://documentation.suse.com/ses/6/single-html/ses-admin/#cha-deployment-backup"/>.
+    Nous vous recommandons vivement de sauvegarder l'ensemble de la configuration et des données de la grappe avant la mise à niveau vers SUSE Enterprise Storage 7. Pour savoir comment sauvegarder toutes vos données, consultez <link xlink:href="https://documentation.suse.com/ses/6/html/ses-all/cha-deployment-backup.html"/>.
    </para>
   </sect2>
 
