--- a/l10n/ses/fr-fr/xml/deployment_admin_ha.xml
+++ b/l10n/ses/fr-fr/xml/deployment_admin_ha.xml
@@ -46,7 +46,7 @@
   </itemizedlist>
 
   <para>
-   Pour plus de détails sur les conditions requises de la grappe, reportez-vous à la page <link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/single-html/SLE-HA-install-quick/#sec-ha-inst-quick-req"/>.
+   Pour plus de détails sur les conditions requises de la grappe, reportez-vous à la page <link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/html/SLE-HA-all/art-sleha-install-quick.html#sec-ha-inst-quick-req"/>.
   </para>
 
   <figure>
@@ -71,17 +71,17 @@
   <procedure>
    <step>
     <para>
-     Configurez une grappe haute disponibilité à 2 noeuds de base avec un stockage partagé comme décrit dans le manuel <link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/single-html/SLE-HA-install-quick/#art-sleha-install-quick"/>.
+     Configurez une grappe haute disponibilité à 2 noeuds de base avec un stockage partagé comme décrit dans le manuel <link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/html/SLE-HA-all/art-sleha-install-quick.html"/>.
     </para>
    </step>
    <step>
     <para>
-     Sur les deux noeuds de la grappe, installez tous les paquetages requis pour l'exécution de l'hyperviseur KVM et du toolkit <systemitem class="library">libvirt</systemitem> comme décrit dans le manuel <link xlink:href="https://documentation.suse.com/sles/15-SP2/single-html/SLES-virtualization/#sec-vt-installation-kvm"/>.
+     Sur les deux noeuds de la grappe, installez tous les paquetages requis pour l'exécution de l'hyperviseur KVM et du toolkit <systemitem class="library">libvirt</systemitem> comme décrit dans le manuel <link xlink:href="https://documentation.suse.com/sles/15-SP2/html/SLES-all/cha-vt-installation.html#sec-vt-installation-kvm"/>.
     </para>
    </step>
    <step>
     <para>
-     Sur le premier noeud de la grappe, créez une machine virtuelle KVM en utilisant <systemitem class="library">libvirt</systemitem> comme décrit dans le manuel <link xlink:href="https://documentation.suse.com/sles/15-SP2/single-html/SLES-virtualization/#sec-libvirt-inst-virt-install"/>. Utilisez le stockage partagé préconfiguré pour stocker les images de disque de la machine virtuelle.
+     Sur le premier noeud de la grappe, créez une machine virtuelle KVM en utilisant <systemitem class="library">libvirt</systemitem> comme décrit dans le manuel <link xlink:href="https://documentation.suse.com/sles/15-SP2/html/SLES-all/cha-kvm-inst.html#sec-libvirt-inst-virt-install"/>. Utilisez le stockage partagé préconfiguré pour stocker les images de disque de la machine virtuelle.
     </para>
    </step>
    <step>
@@ -94,7 +94,7 @@
    </step>
    <step>
     <para>
-     Créez une ressource pour la machine virtuelle du noeud Admin. Reportez-vous à l'adresse <link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/single-html/SLE-HA-guide/#cha-conf-hawk2"/> pour des informations générales sur la création de ressources haute disponibilité. Des informations détaillées sur la création de ressources pour une machine virtuelle KVM sont décrites à l'adresse <link xlink:href="http://www.linux-ha.org/wiki/VirtualDomain_%28resource_agent%29"/>.
+     Créez une ressource pour la machine virtuelle du noeud Admin. Reportez-vous à l'adresse <link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/html/SLE-HA-all/cha-conf-hawk2.html"/> pour des informations générales sur la création de ressources haute disponibilité. Des informations détaillées sur la création de ressources pour une machine virtuelle KVM sont décrites à l'adresse <link xlink:href="http://www.linux-ha.org/wiki/VirtualDomain_%28resource_agent%29"/>.
     </para>
    </step>
    <step>
