--- a/l10n/ses/fr-fr/xml/deployment_cifs.xml
+++ b/l10n/ses/fr-fr/xml/deployment_cifs.xml
@@ -182,7 +182,7 @@
     Par ailleurs, deux adresses IP virtuelles flottantes permettent aux clients de se connecter au service quel que soit le noeud physique sur lequel il s'exécute. L'adresse IP <systemitem class="ipaddress">192.168.1.10</systemitem> est utilisée pour l'administration des grappes avec Hawk2 et <systemitem class="ipaddress">192.168.2.1</systemitem> exclusivement pour les exportations CIFS. Cela facilite l'application des restrictions de sécurité ultérieurement.
    </para>
    <para>
-    La procédure suivante décrit l'exemple d'installation. Pour plus d'informations, reportez-vous à la page <link xlink:href="https://documentation.suse.com/sle-ha/15-SP1/single-html/SLE-HA-install-quick/"/>.
+    La procédure suivante décrit l'exemple d'installation. Pour plus d'informations, reportez-vous à la page <link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/html/SLE-HA-all/art-sleha-install-quick.html"/>.
    </para>
    <procedure xml:id="proc-sec-ses-cifs-ha">
     <step>
@@ -196,7 +196,7 @@
     </step>
     <step>
      <para>
-      La configuration de SLE-HA nécessite un périphérique d'isolation pour éviter une situation de <emphasis>split brain</emphasis> (cerveau divisé) lorsque les noeuds de grappe actifs ne sont plus synchronisés. Pour cela, vous pouvez utiliser une image Ceph RBD avec un périphérique de traitement par blocs Stonith (SBD). Pour plus d'informations, reportez-vous à la page <link xlink:href="https://documentation.suse.com/sle-ha/15-SP1/single-html/SLE-HA-guide/#sec-ha-storage-protect-fencing-setup"/>.
+      La configuration de SLE-HA nécessite un périphérique d'isolation pour éviter une situation de <emphasis>split brain</emphasis> (cerveau divisé) lorsque les noeuds de grappe actifs ne sont plus synchronisés. Pour cela, vous pouvez utiliser une image Ceph RBD avec un périphérique de traitement par blocs Stonith (SBD). Pour plus d'informations, reportez-vous à la page <link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/html/SLE-HA-all/cha-ha-storage-protect.html#sec-ha-storage-protect-fencing-setup"/>.
      </para>
      <para>
       Si elle n'existe pas encore, créez une réserve RBD appelée <literal>rbd</literal> (voir <xref linkend="ceph-pools-operate-add-pool"/>) et associez-la à l'application <literal>rbd</literal> (voir <xref linkend="ceph-pools-associate"/>). Créez ensuite une image RBD associée appelée <literal>sbd01</literal> :
@@ -408,7 +408,7 @@ Full list of resources:
 <prompt>crm(live)configure# </prompt><command>order</command> o-with-ctdb 0: cl-ip cl-ctdb
 <prompt>crm(live)configure# </prompt><command>commit</command></screen>
      <para>
-      Si <literal>unique_clone_address</literal> est défini sur <literal>true</literal>, l'agent de ressource IPaddr2 ajoute un ID de clone à l'adresse spécifiée, ce qui permet d'obtenir trois adresses IP différentes. Elles ne sont généralement pas nécessaires, mais aident à l'équilibrage de la charge. Pour plus d'informations sur ce sujet, reportez-vous à l'adresse <link xlink:href="https://documentation.suse.com/sle-ha/15-SP1/single-html/SLE-HA-guide/#cha-ha-lb"/>.
+      Si <literal>unique_clone_address</literal> est défini sur <literal>true</literal>, l'agent de ressource IPaddr2 ajoute un ID de clone à l'adresse spécifiée, ce qui permet d'obtenir trois adresses IP différentes. Elles ne sont généralement pas nécessaires, mais aident à l'équilibrage de la charge. Pour plus d'informations sur ce sujet, reportez-vous à l'adresse <link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/html/SLE-HA-all/cha-ha-lb.html"/>.
      </para>
     </step>
     <step>
