--- a/l10n/ses/it-it/xml/admin_ceph_iscsi.xml
+++ b/l10n/ses/it-it/xml/admin_ceph_iscsi.xml
@@ -38,7 +38,7 @@
     </listitem>
    </itemizedlist>
    <para>
-    Se sull'host dell'iniziatore viene eseguito SUSE Linux Enterprise Server, consultare la pagina all'indirizzo <link xlink:href="https://documentation.suse.com/sles/15-SP1/single-html/SLES-storage/#sec-iscsi-initiator"/> per ulteriori informazioni su come eseguire la connessione a una destinazione iSCSI.
+    Se sull'host dell'iniziatore viene eseguito SUSE Linux Enterprise Server, consultare la pagina all'indirizzo <link xlink:href="https://documentation.suse.com/sles/15-SP2/html/SLES-all/cha-iscsi.html#sec-iscsi-initiator"/> per ulteriori informazioni su come eseguire la connessione a una destinazione iSCSI.
    </para>
    <para>
     Per qualsiasi altra distribuzione Linux che supporta <systemitem>open-iscsi</systemitem>, procedere per rilevare le destinazioni sul gateway <systemitem class="daemon">ceph-iscsi</systemitem> in uso (in questo esempio viene utilizzato iscsi1.example.com come indirizzo del portale; per l'accesso multipath ripetere i passaggi con iscsi2.example.com):
