--- a/l10n/ses/it-it/xml/admin_ceph_upgrade.xml
+++ b/l10n/ses/it-it/xml/admin_ceph_upgrade.xml
@@ -50,12 +50,12 @@
   <itemizedlist>
    <listitem>
     <para>
-     La migrazione degli OSD da FileStore a BlueStore <emphasis>deve</emphasis> essere eseguita prima dell'upgrade, poiché FileStore non è supportato in SUSE Enterprise Storage 7. All'indirizzo <link xlink:href="https://documentation.suse.com/ses/6/single-html/ses-deployment/#filestore2bluestore"/> sono disponibili ulteriori dettagli su BlueStore e su come eseguire la migrazione da FileStore.
+     La migrazione degli OSD da FileStore a BlueStore <emphasis>deve</emphasis> essere eseguita prima dell'upgrade, poiché FileStore non è supportato in SUSE Enterprise Storage 7. All'indirizzo <link xlink:href="https://documentation.suse.com/ses/6/html/ses-all/cha-ceph-upgrade.html#filestore2bluestore"/> sono disponibili ulteriori dettagli su BlueStore e su come eseguire la migrazione da FileStore.
     </para>
    </listitem>
    <listitem>
     <para>
-     Se è in esecuzione una versione precedente del cluster in cui sono ancora utilizzati OSD <literal>ceph-disk</literal>, è <emphasis>necessario</emphasis> passare a <literal>ceph-volume</literal> prima dell'upgrade. Ulteriori dettagli sono disponibili in <link xlink:href="https://documentation.suse.com/ses/6/single-html/ses-deployment/#upgrade-osd-deployment"/>.
+     Se è in esecuzione una versione precedente del cluster in cui sono ancora utilizzati OSD <literal>ceph-disk</literal>, è <emphasis>necessario</emphasis> passare a <literal>ceph-volume</literal> prima dell'upgrade. Ulteriori dettagli sono disponibili in <link xlink:href="https://documentation.suse.com/ses/6/html/ses-all/cha-ceph-upgrade.html#upgrade-osd-deployment"/>.
     </para>
    </listitem>
   </itemizedlist>
@@ -143,7 +143,7 @@
   <sect2 xml:id="upgrade-backup-config-data">
    <title>Backup della configurazione e dei dati del cluster</title>
    <para>
-    Si consiglia di eseguire il backup della configurazione e dei dati del cluster prima di avviare l'upgrade a SUSE Enterprise Storage 7. Per istruzioni su come eseguire il backup di tutti i dati, vedere <link xlink:href="https://documentation.suse.com/ses/6/single-html/ses-admin/#cha-deployment-backup"/>.
+    Si consiglia di eseguire il backup della configurazione e dei dati del cluster prima di avviare l'upgrade a SUSE Enterprise Storage 7. Per istruzioni su come eseguire il backup di tutti i dati, vedere <link xlink:href="https://documentation.suse.com/ses/6/html/ses-all/cha-deployment-backup.html"/>.
    </para>
   </sect2>
 
