--- a/l10n/ses/it-it/xml/deployment_admin_ha.xml
+++ b/l10n/ses/it-it/xml/deployment_admin_ha.xml
@@ -46,7 +46,7 @@
   </itemizedlist>
 
   <para>
-   Ulteriori dettagli sui requisiti del cluster sono disponibili all'indirizzo <link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/single-html/SLE-HA-install-quick/#sec-ha-inst-quick-req"/>.
+   Ulteriori dettagli sui requisiti del cluster sono disponibili all'indirizzo <link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/html/SLE-HA-all/art-sleha-install-quick.html#sec-ha-inst-quick-req"/>.
   </para>
 
   <figure>
@@ -71,17 +71,17 @@
   <procedure>
    <step>
     <para>
-     Configurare un cluster HA di base a 2 nodi con storage condiviso come descritto in <link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/single-html/SLE-HA-install-quick/#art-sleha-install-quick"/>.
+     Configurare un cluster HA di base a 2 nodi con storage condiviso come descritto in <link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/html/SLE-HA-all/art-sleha-install-quick.html"/>.
     </para>
    </step>
    <step>
     <para>
-     Su entrambi i nodi cluster, installare tutti i pacchetti richiesti per eseguire l'ipervisore KVM e il toolkit <systemitem class="library">libvirt</systemitem> come descritto in <link xlink:href="https://documentation.suse.com/sles/15-SP2/single-html/SLES-virtualization/#sec-vt-installation-kvm"/>.
+     Su entrambi i nodi cluster, installare tutti i pacchetti richiesti per eseguire l'ipervisore KVM e il toolkit <systemitem class="library">libvirt</systemitem> come descritto in <link xlink:href="https://documentation.suse.com/sles/15-SP2/html/SLES-all/cha-vt-installation.html#sec-vt-installation-kvm"/>.
     </para>
    </step>
    <step>
     <para>
-     Sul primo nodo del cluster, creare una nuova macchina virtuale (VM) KVM utilizzando <systemitem class="library">libvirt</systemitem> come descritto in <link xlink:href="https://documentation.suse.com/sles/15-SP2/single-html/SLES-virtualization/#sec-libvirt-inst-virt-install"/>. Utilizzare lo storage condiviso preconfigurato per memorizzare le immagini del disco della VM.
+     Sul primo nodo del cluster, creare una nuova macchina virtuale (VM) KVM utilizzando <systemitem class="library">libvirt</systemitem> come descritto in <link xlink:href="https://documentation.suse.com/sles/15-SP2/html/SLES-all/cha-kvm-inst.html#sec-libvirt-inst-virt-install"/>. Utilizzare lo storage condiviso preconfigurato per memorizzare le immagini del disco della VM.
     </para>
    </step>
    <step>
@@ -94,7 +94,7 @@
    </step>
    <step>
     <para>
-     Creare una risorsa per la VM del nodo admin. Per informazioni generali sulla creazione di risorse HA, consultare <link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/single-html/SLE-HA-guide/#cha-conf-hawk2"/>. All'indirizzo <link xlink:href="http://www.linux-ha.org/wiki/VirtualDomain_%28resource_agent%29"/> sono disponibili informazioni dettagliate sulla creazione di risorse per una macchina virtuale KVM.
+     Creare una risorsa per la VM del nodo admin. Per informazioni generali sulla creazione di risorse HA, consultare <link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/html/SLE-HA-all/cha-conf-hawk2.html"/>. All'indirizzo <link xlink:href="http://www.linux-ha.org/wiki/VirtualDomain_%28resource_agent%29"/> sono disponibili informazioni dettagliate sulla creazione di risorse per una macchina virtuale KVM.
     </para>
    </step>
    <step>
