--- a/l10n/ses/it-it/xml/deployment_cifs.xml
+++ b/l10n/ses/it-it/xml/deployment_cifs.xml
@@ -182,7 +182,7 @@
     Inoltre, due indirizzi IP virtuali mobili consentono ai client di connettersi al servizio indipendentemente dal nodo fisico sul quale è in esecuzione. <systemitem class="ipaddress">192.168.1.10</systemitem> è utilizzato per amministrazione del cluster con Hawk2 e <systemitem class="ipaddress">192.168.2.1</systemitem> esclusivamente per esportazioni CIFS. Ciò semplifica la successiva applicazione delle limitazioni di sicurezza.
    </para>
    <para>
-    La procedura seguente descrive l'installazione di esempio. Ulteriori informazioni sono disponibili all'indirizzo <link xlink:href="https://documentation.suse.com/sle-ha/15-SP1/single-html/SLE-HA-install-quick/"/>.
+    La procedura seguente descrive l'installazione di esempio. Ulteriori informazioni sono disponibili all'indirizzo <link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/html/SLE-HA-all/art-sleha-install-quick.html"/>.
    </para>
    <procedure xml:id="proc-sec-ses-cifs-ha">
     <step>
@@ -196,7 +196,7 @@
     </step>
     <step>
      <para>
-      La configurazione SLE ad elevata disponibilità richiede un dispositivo di isolamento per evitare una situazione <emphasis>split-brain</emphasis> quando i nodi del cluster attivi non sono più sincronizzati. A questo scopo, è possibile utilizzare un'immagine RBD Ceph con il dispositivo di blocco Stonith (SBD, Stonith Block Device). Per ulteriori dettagli, fare riferimento alla <link xlink:href="https://documentation.suse.com/sle-ha/15-SP1/single-html/SLE-HA-guide/#sec-ha-storage-protect-fencing-setup"/>.
+      La configurazione SLE ad elevata disponibilità richiede un dispositivo di isolamento per evitare una situazione <emphasis>split-brain</emphasis> quando i nodi del cluster attivi non sono più sincronizzati. A questo scopo, è possibile utilizzare un'immagine RBD Ceph con il dispositivo di blocco Stonith (SBD, Stonith Block Device). Per ulteriori dettagli, fare riferimento alla <link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/html/SLE-HA-all/cha-ha-storage-protect.html#sec-ha-storage-protect-fencing-setup"/>.
      </para>
      <para>
       Se non è ancora esistente, creare un pool RBD denominato <literal>rbd</literal> (vedere la <xref linkend="ceph-pools-operate-add-pool"/>) e associarlo a <literal>rbd</literal> (vedere la <xref linkend="ceph-pools-associate"/>). Quindi, creare un'immagine RBD correlata chiamata <literal>sbd01</literal>:
@@ -408,7 +408,7 @@ Full list of resources:
 <prompt>crm(live)configure# </prompt><command>order</command> o-with-ctdb 0: cl-ip cl-ctdb
 <prompt>crm(live)configure# </prompt><command>commit</command></screen>
      <para>
-      Se <literal>unique_clone_address</literal> è impostato su <literal>true</literal>, l'agente della risorsa IPaddr2 aggiunge un ID clone all'indirizzo specificato, portando a tre diversi indirizzi IP, che non sono di solito necessari, ma aiutano per il bilanciamento di carico. Per ulteriori informazioni su questo argomento, vedere <link xlink:href="https://documentation.suse.com/sle-ha/15-SP1/single-html/SLE-HA-guide/#cha-ha-lb"/>.
+      Se <literal>unique_clone_address</literal> è impostato su <literal>true</literal>, l'agente della risorsa IPaddr2 aggiunge un ID clone all'indirizzo specificato, portando a tre diversi indirizzi IP, che non sono di solito necessari, ma aiutano per il bilanciamento di carico. Per ulteriori informazioni su questo argomento, vedere <link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/html/SLE-HA-all/cha-ha-lb.html"/>.
      </para>
     </step>
     <step>
