--- a/l10n/ses/ja-jp/xml/admin_ceph_iscsi.xml
+++ b/l10n/ses/ja-jp/xml/admin_ceph_iscsi.xml
@@ -38,7 +38,7 @@
     </listitem>
    </itemizedlist>
    <para>
-    イニシエータホストでSUSE Linux Enterprise Serverが実行されている場合、iSCSIターゲットへの接続方法については、<link xlink:href="https://documentation.suse.com/sles/15-SP1/single-html/SLES-storage/#sec-iscsi-initiator"/>を参照してください。
+    イニシエータホストでSUSE Linux Enterprise Serverが実行されている場合、iSCSIターゲットへの接続方法については、<link xlink:href="https://documentation.suse.com/sles/15-SP2/html/SLES-all/cha-iscsi.html#sec-iscsi-initiator"/>を参照してください。
    </para>
    <para>
     <systemitem>open-iscsi</systemitem>をサポートするその他のLinux配布パッケージでは、次に進んで<systemitem class="daemon">ceph-iscsi</systemitem>ゲートウェイ上でターゲットを検出します(この例では、iscsi1.example.comをポータルアドレスとして使用します。マルチパスアクセスの場合は、iscsi2.example.comでこれらの手順を繰り返します)。
