--- a/l10n/ses/ja-jp/xml/admin_ceph_kvm.xml
+++ b/l10n/ses/ja-jp/xml/admin_ceph_kvm.xml
@@ -11,7 +11,7 @@
   Cephの最も一般的な使用事例として、仮想マシンにBlock Deviceイメージを提供することがあります。たとえば、理想的な設定のOSと関連ソフトウェアを使用して「ゴールデン」イメージを作成できます。続いて、そのイメージのスナップショットを作成します。最後に、スナップショットのクローンを作成します(通常は複数回。詳細については、<xref linkend="cha-ceph-snapshots-rbd"/>を参照してください)。スナップショットのコピーオンライトクローンを作成できるということは、新しい仮想マシンを起動するたびにクライアントがイメージ全体をダウンロードしないで済むため、CephはBlock Deviceイメージを仮想マシンに素早くプロビジョニングできることを意味します。
  </para>
  <para>
-  Ceph Block DeviceをQEMU仮想マシンと統合できます。QEMU KVMの詳細については、<link xlink:href="https://documentation.suse.com/sles/15-SP1/single-html/SLES-virtualization/#part-virt-qemu"/>を参照してください。
+  Ceph Block DeviceをQEMU仮想マシンと統合できます。QEMU KVMの詳細については、<link xlink:href="https://documentation.suse.com/sles/15-SP2/html/SLES-all/part-virt-qemu.html"/>を参照してください。
  </para>
  <sect1 xml:id="ceph-kvm-install">
   <title><systemitem>qemu-block-rbd</systemitem>のインストール</title>
