--- a/l10n/ses/ja-jp/xml/admin_ceph_upgrade.xml
+++ b/l10n/ses/ja-jp/xml/admin_ceph_upgrade.xml
@@ -50,12 +50,12 @@
   <itemizedlist>
    <listitem>
     <para>
-     FileStoreからBlueStoreへのOSDマイグレーションは、必ずアップグレード前に行ってください。<emphasis/>SUSE Enterprise Storage 7がFileStoreをサポートしていないためです。BlueStoreの詳細と、FileStoreからBlueStoreへのマイグレーション方法の詳細については、<link xlink:href="https://documentation.suse.com/ses/6/single-html/ses-deployment/#filestore2bluestore"/>を参照してください。
+     FileStoreからBlueStoreへのOSDマイグレーションは、必ずアップグレード前に行ってください。<emphasis/>SUSE Enterprise Storage 7がFileStoreをサポートしていないためです。BlueStoreの詳細と、FileStoreからBlueStoreへのマイグレーション方法の詳細については、<link xlink:href="https://documentation.suse.com/ses/6/html/ses-all/cha-ceph-upgrade.html#filestore2bluestore"/>を参照してください。
     </para>
    </listitem>
    <listitem>
     <para>
-     <literal>ceph-disk</literal> OSDを使用するクラスタを実行中の場合は、アップグレード前に必ず<emphasis/><literal>ceph-volume</literal>へ切り替えてください。詳細については、<link xlink:href="https://documentation.suse.com/ses/6/single-html/ses-deployment/#upgrade-osd-deployment"/>を参照してください。
+     <literal>ceph-disk</literal> OSDを使用するクラスタを実行中の場合は、アップグレード前に必ず<emphasis/><literal>ceph-volume</literal>へ切り替えてください。詳細については、<link xlink:href="https://documentation.suse.com/ses/6/html/ses-all/cha-ceph-upgrade.html#upgrade-osd-deployment"/>を参照してください。
     </para>
    </listitem>
   </itemizedlist>
@@ -143,7 +143,7 @@
   <sect2 xml:id="upgrade-backup-config-data">
    <title>クラスタ設定とデータのバックアップ</title>
    <para>
-    SUSE Enterprise Storage 7にアップグレードする前に、すべてのクラスタの設定とデータをバックアップすることを強く推奨します。すべてのデータをバックアップする方法については、<link xlink:href="https://documentation.suse.com/ses/6/single-html/ses-admin/#cha-deployment-backup"/>を参照してください。
+    SUSE Enterprise Storage 7にアップグレードする前に、すべてのクラスタの設定とデータをバックアップすることを強く推奨します。すべてのデータをバックアップする方法については、<link xlink:href="https://documentation.suse.com/ses/6/html/ses-all/cha-deployment-backup.html"/>を参照してください。
    </para>
   </sect2>
 
