--- a/l10n/ses/ja-jp/xml/deploy_cephadm.xml
+++ b/l10n/ses/ja-jp/xml/deploy_cephadm.xml
@@ -80,7 +80,7 @@
    </step>
    <step>
     <para>
-     ネットワークを設定します。各ノードでDNS名が適切に解決されるようにする設定も含まれます。ネットワークの設定の詳細については、<link xlink:href="https://documentation.suse.com/sles/15-SP2/single-html/SLES-admin/#sec-network-yast"/>を参照してください。DNSサーバの設定の詳細については、<link xlink:href="https://documentation.suse.com/sles/15-SP2/single-html/SLES-admin/#cha-dns"/>を参照してください。
+     ネットワークを設定します。各ノードでDNS名が適切に解決されるようにする設定も含まれます。ネットワークの設定の詳細については、<link xlink:href="https://documentation.suse.com/sles/15-SP2/html/SLES-all/cha-network.html#sec-network-yast"/>を参照してください。DNSサーバの設定の詳細については、<link xlink:href="https://documentation.suse.com/sles/15-SP2/html/SLES-all/cha-dns.html"/>を参照してください。
     </para>
    </step>
   </procedure>
