--- a/l10n/ses/ja-jp/xml/deployment_admin_ha.xml
+++ b/l10n/ses/ja-jp/xml/deployment_admin_ha.xml
@@ -46,7 +46,7 @@
   </itemizedlist>
 
   <para>
-   クラスタの要件の詳細については、<link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/single-html/SLE-HA-install-quick/#sec-ha-inst-quick-req"/>を参照してください。
+   クラスタの要件の詳細については、<link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/html/SLE-HA-all/art-sleha-install-quick.html#sec-ha-inst-quick-req"/>を参照してください。
   </para>
 
   <figure>
@@ -71,17 +71,17 @@
   <procedure>
    <step>
     <para>
-     共有ストレージを使用する基本的な2ノードHAクラスタを設定します。<link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/single-html/SLE-HA-install-quick/#art-sleha-install-quick"/>を参照してください。
+     共有ストレージを使用する基本的な2ノードHAクラスタを設定します。<link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/html/SLE-HA-all/art-sleha-install-quick.html"/>を参照してください。
     </para>
    </step>
    <step>
     <para>
-     両方のクラスタノードに、KVMハイパーバイザを実行するために必要なすべてのパッケージと<systemitem class="library">libvirt</systemitem>ツールキットをインストールします。<link xlink:href="https://documentation.suse.com/sles/15-SP2/single-html/SLES-virtualization/#sec-vt-installation-kvm"/>を参照してください。
+     両方のクラスタノードに、KVMハイパーバイザを実行するために必要なすべてのパッケージと<systemitem class="library">libvirt</systemitem>ツールキットをインストールします。<link xlink:href="https://documentation.suse.com/sles/15-SP2/html/SLES-all/cha-vt-installation.html#sec-vt-installation-kvm"/>を参照してください。
     </para>
    </step>
    <step>
     <para>
-     1つ目のクラスタノードで、<systemitem class="library">libvirt</systemitem>を利用する新しいKVM VM (仮想マシン)を作成します。<link xlink:href="https://documentation.suse.com/sles/15-SP2/single-html/SLES-virtualization/#sec-libvirt-inst-virt-install"/>を参照してください。事前設定済みの共有ストレージを使用して、VMのディスクイメージを保存します。
+     1つ目のクラスタノードで、<systemitem class="library">libvirt</systemitem>を利用する新しいKVM VM (仮想マシン)を作成します。<link xlink:href="https://documentation.suse.com/sles/15-SP2/html/SLES-all/cha-kvm-inst.html#sec-libvirt-inst-virt-install"/>を参照してください。事前設定済みの共有ストレージを使用して、VMのディスクイメージを保存します。
     </para>
    </step>
    <step>
@@ -94,7 +94,7 @@
    </step>
    <step>
     <para>
-     管理ノードVMのリソースを作成します。HAリソースの作成に関する全般的な情報については、<link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/single-html/SLE-HA-guide/#cha-conf-hawk2"/>を参照してください。KVM仮想マシンのリソースの作成に関する詳細情報については、<link xlink:href="http://www.linux-ha.org/wiki/VirtualDomain_%28resource_agent%29"/>を参照してください。
+     管理ノードVMのリソースを作成します。HAリソースの作成に関する全般的な情報については、<link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/html/SLE-HA-all/cha-conf-hawk2.html"/>を参照してください。KVM仮想マシンのリソースの作成に関する詳細情報については、<link xlink:href="http://www.linux-ha.org/wiki/VirtualDomain_%28resource_agent%29"/>を参照してください。
     </para>
    </step>
    <step>
