--- a/l10n/ses/ja-jp/xml/deployment_cifs.xml
+++ b/l10n/ses/ja-jp/xml/deployment_cifs.xml
@@ -182,7 +182,7 @@
     さらに、2つの浮動仮想IPアドレスにより、実行している物理ノードがどれであれ、クライアントからの該当サービスへの接続が可能になります。Hawk2でのクラスタ管理には<systemitem class="ipaddress">192.168.1.10</systemitem>を使用し、CIFSエクスポートには<systemitem class="ipaddress">192.168.2.1</systemitem>を排他的に使用します。これにより、後で簡単にセキュリティ制約を適用できます。
    </para>
    <para>
-    次の手順では、インストールの例について説明します。詳細については、<link xlink:href="https://documentation.suse.com/sle-ha/15-SP1/single-html/SLE-HA-install-quick/"/>を参照してください。
+    次の手順では、インストールの例について説明します。詳細については、<link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/html/SLE-HA-all/art-sleha-install-quick.html"/>を参照してください。
    </para>
    <procedure xml:id="proc-sec-ses-cifs-ha">
     <step>
@@ -196,7 +196,7 @@
     </step>
     <step>
      <para>
-      SLE-HAセットアップには、アクティブクラスタノードが非同期状態になった場合に「スプリットブレイン」<emphasis/>状態に陥ることを避けるため、フェンシングデバイスが必要です。このため、SBD (Stonith Block Device)を使用したCeph RBDイメージを使用できます。詳細については、<link xlink:href="https://documentation.suse.com/sle-ha/15-SP1/single-html/SLE-HA-guide/#sec-ha-storage-protect-fencing-setup"/>を参照してください。
+      SLE-HAセットアップには、アクティブクラスタノードが非同期状態になった場合に「スプリットブレイン」<emphasis/>状態に陥ることを避けるため、フェンシングデバイスが必要です。このため、SBD (Stonith Block Device)を使用したCeph RBDイメージを使用できます。詳細については、<link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/html/SLE-HA-all/cha-ha-storage-protect.html#sec-ha-storage-protect-fencing-setup"/>を参照してください。
      </para>
      <para>
       RBDイメージが存在しない場合は、<literal>rbd</literal>という名前のRBDプールを作成し(<xref linkend="ceph-pools-operate-add-pool"/>を参照してください)、<literal>rbd</literal>を関連付けます(<xref linkend="ceph-pools-associate"/>を参照してください)。そして、<literal>sbd01</literal>という名前の関連するRBDイメージを作成します。
@@ -408,7 +408,7 @@ Full list of resources:
 <prompt>crm(live)configure# </prompt><command>order</command> o-with-ctdb 0: cl-ip cl-ctdb
 <prompt>crm(live)configure# </prompt><command>commit</command></screen>
      <para>
-      <literal>unique_clone_address</literal>が<literal>true</literal>に設定されている場合、IPaddr2リソースエージェントはクローンIDを指定のアドレスに追加し、3つの異なるIPアドレスを設定します。これらは通常必要とされませんが、負荷分散に役立ちます。この項目の詳細については、<link xlink:href="https://documentation.suse.com/sle-ha/15-SP1/single-html/SLE-HA-guide/#cha-ha-lb"/>を参照してください。
+      <literal>unique_clone_address</literal>が<literal>true</literal>に設定されている場合、IPaddr2リソースエージェントはクローンIDを指定のアドレスに追加し、3つの異なるIPアドレスを設定します。これらは通常必要とされませんが、負荷分散に役立ちます。この項目の詳細については、<link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/html/SLE-HA-all/cha-ha-lb.html"/>を参照してください。
      </para>
     </step>
     <step>
