--- a/l10n/ses/pt-br/xml/admin_ceph_iscsi.xml
+++ b/l10n/ses/pt-br/xml/admin_ceph_iscsi.xml
@@ -38,7 +38,7 @@
     </listitem>
    </itemizedlist>
    <para>
-    Se o host do seu iniciador executa o SUSE Linux Enterprise Server, consulte <link xlink:href="https://documentation.suse.com/sles/15-SP1/single-html/SLES-storage/#sec-iscsi-initiator"/> para obter detalhes sobre como se conectar a um destino iSCSI.
+    Se o host do seu iniciador executa o SUSE Linux Enterprise Server, consulte <link xlink:href="https://documentation.suse.com/sles/15-SP2/html/SLES-all/cha-iscsi.html#sec-iscsi-initiator"/> para obter detalhes sobre como se conectar a um destino iSCSI.
    </para>
    <para>
     Para qualquer outra distribuição Linux com suporte a <systemitem>open-iscsi</systemitem>, prossiga para a descoberta de destinos no gateway <systemitem class="daemon">ceph-iscsi</systemitem>. Este exemplo usa iscsi1.example.com como endereço do portal. Para acesso de múltiplos caminhos, repita estas etapas com iscsi2.example.com:
