--- a/l10n/ses/pt-br/xml/admin_ceph_kvm.xml
+++ b/l10n/ses/pt-br/xml/admin_ceph_kvm.xml
@@ -11,7 +11,7 @@
   O caso de uso mais frequente do Ceph envolve fornecer imagens de dispositivos de blocos para máquinas virtuais. Por exemplo, um usuário pode criar uma imagem “perfeita” com um OS e qualquer software relevante em uma configuração ideal. Em seguida, ele captura um instantâneo da imagem. Por fim, ele clona o instantâneo (normalmente, várias vezes. Consulte a <xref linkend="cha-ceph-snapshots-rbd"/> para obter detalhes). A capacidade de criar clones de cópia em gravação de um instantâneo significa que o Ceph pode provisionar imagens de dispositivos de blocos para máquinas virtuais rapidamente, pois o cliente não precisa fazer download de uma imagem inteira cada vez que capturar uma nova máquina virtual.
  </para>
  <para>
-  Os dispositivos de blocos do Ceph podem ser integrados às máquinas virtuais QEMU. Para obter mais informações sobre a KVM QEMU, consulte <link xlink:href="https://documentation.suse.com/sles/15-SP1/single-html/SLES-virtualization/#part-virt-qemu"/>.
+  Os dispositivos de blocos do Ceph podem ser integrados às máquinas virtuais QEMU. Para obter mais informações sobre a KVM QEMU, consulte <link xlink:href="https://documentation.suse.com/sles/15-SP2/html/SLES-all/part-virt-qemu.html"/>.
  </para>
  <sect1 xml:id="ceph-kvm-install">
   <title>Instalando o <systemitem>qemu-block-rbd</systemitem></title>
