--- a/l10n/ses/pt-br/xml/admin_ceph_upgrade.xml
+++ b/l10n/ses/pt-br/xml/admin_ceph_upgrade.xml
@@ -50,12 +50,12 @@
   <itemizedlist>
    <listitem>
     <para>
-     A migração do OSD do FileStore para o BlueStore <emphasis>deve</emphasis> ser feita antes do upgrade, pois o FileStore não é suportado no SUSE Enterprise Storage 7. Encontre mais detalhes sobre o BlueStore e como migrar do FileStore em <link xlink:href="https://documentation.suse.com/ses/6/single-html/ses-deployment/#filestore2bluestore"/>.
+     A migração do OSD do FileStore para o BlueStore <emphasis>deve</emphasis> ser feita antes do upgrade, pois o FileStore não é suportado no SUSE Enterprise Storage 7. Encontre mais detalhes sobre o BlueStore e como migrar do FileStore em <link xlink:href="https://documentation.suse.com/ses/6/html/ses-all/cha-ceph-upgrade.html#filestore2bluestore"/>.
     </para>
    </listitem>
    <listitem>
     <para>
-     Se você executa um cluster mais antigo que ainda usa OSDs do <literal>ceph-disk</literal>, <emphasis>precisa</emphasis> alternar para o <literal>ceph-volume</literal> antes do upgrade. Encontre mais detalhes na <link xlink:href="https://documentation.suse.com/ses/6/single-html/ses-deployment/#upgrade-osd-deployment"/>.
+     Se você executa um cluster mais antigo que ainda usa OSDs do <literal>ceph-disk</literal>, <emphasis>precisa</emphasis> alternar para o <literal>ceph-volume</literal> antes do upgrade. Encontre mais detalhes na <link xlink:href="https://documentation.suse.com/ses/6/html/ses-all/cha-ceph-upgrade.html#upgrade-osd-deployment"/>.
     </para>
    </listitem>
   </itemizedlist>
@@ -143,7 +143,7 @@
   <sect2 xml:id="upgrade-backup-config-data">
    <title>Fazendo backup da configuração e dos dados do cluster</title>
    <para>
-    É altamente recomendável fazer backup de todas as configurações e dados do cluster antes de iniciar o upgrade para o SUSE Enterprise Storage 7. Para obter instruções sobre como fazer backup de todos os seus dados, consulte <link xlink:href="https://documentation.suse.com/ses/6/single-html/ses-admin/#cha-deployment-backup"/>.
+    É altamente recomendável fazer backup de todas as configurações e dados do cluster antes de iniciar o upgrade para o SUSE Enterprise Storage 7. Para obter instruções sobre como fazer backup de todos os seus dados, consulte <link xlink:href="https://documentation.suse.com/ses/6/html/ses-all/cha-deployment-backup.html"/>.
    </para>
   </sect2>
 
