--- a/l10n/ses/pt-br/xml/deploy_cephadm.xml
+++ b/l10n/ses/pt-br/xml/deploy_cephadm.xml
@@ -80,7 +80,7 @@
    </step>
    <step>
     <para>
-     Defina as configurações de rede incluindo a resolução de nome DNS em cada nó. Para obter mais informações sobre como configurar uma rede, consulte <link xlink:href="https://documentation.suse.com/sles/15-SP2/single-html/SLES-admin/#sec-network-yast"/>. Para obter mais informações sobre como configurar um servidor DNS, consulte <link xlink:href="https://documentation.suse.com/sles/15-SP2/single-html/SLES-admin/#cha-dns"/>.
+     Defina as configurações de rede incluindo a resolução de nome DNS em cada nó. Para obter mais informações sobre como configurar uma rede, consulte <link xlink:href="https://documentation.suse.com/sles/15-SP2/html/SLES-all/cha-network.html#sec-network-yast"/>. Para obter mais informações sobre como configurar um servidor DNS, consulte <link xlink:href="https://documentation.suse.com/sles/15-SP2/html/SLES-all/cha-dns.html"/>.
     </para>
    </step>
   </procedure>
