--- a/l10n/ses/pt-br/xml/deployment_admin_ha.xml
+++ b/l10n/ses/pt-br/xml/deployment_admin_ha.xml
@@ -46,7 +46,7 @@
   </itemizedlist>
 
   <para>
-   Encontre mais detalhes sobre os requisitos de cluster no site <link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/single-html/SLE-HA-install-quick/#sec-ha-inst-quick-req"/>.
+   Encontre mais detalhes sobre os requisitos de cluster no site <link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/html/SLE-HA-all/art-sleha-install-quick.html#sec-ha-inst-quick-req"/>.
   </para>
 
   <figure>
@@ -71,17 +71,17 @@
   <procedure>
    <step>
     <para>
-     Configure um cluster de HA básico de 2 nós com armazenamento compartilhado, conforme descrito em <link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/single-html/SLE-HA-install-quick/#art-sleha-install-quick"/>.
+     Configure um cluster de HA básico de 2 nós com armazenamento compartilhado, conforme descrito em <link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/html/SLE-HA-all/art-sleha-install-quick.html"/>.
     </para>
    </step>
    <step>
     <para>
-     Em ambos os nós do cluster, instale todos os pacotes necessários para executar o hipervisor KVM e o kit de ferramentas <systemitem class="library">libvirt</systemitem>, conforme descrito em <link xlink:href="https://documentation.suse.com/sles/15-SP2/single-html/SLES-virtualization/#sec-vt-installation-kvm"/>.
+     Em ambos os nós do cluster, instale todos os pacotes necessários para executar o hipervisor KVM e o kit de ferramentas <systemitem class="library">libvirt</systemitem>, conforme descrito em <link xlink:href="https://documentation.suse.com/sles/15-SP2/html/SLES-all/cha-vt-installation.html#sec-vt-installation-kvm"/>.
     </para>
    </step>
    <step>
     <para>
-     No primeiro nó do cluster, crie uma nova VM (Virtual Machine – Máquina Virtual) KVM usando o <systemitem class="library">libvirt</systemitem>, conforme descrito em <link xlink:href="https://documentation.suse.com/sles/15-SP2/single-html/SLES-virtualization/#sec-libvirt-inst-virt-install"/>. Use o armazenamento compartilhado pré-configurado para armazenar as imagens de disco da VM.
+     No primeiro nó do cluster, crie uma nova VM (Virtual Machine – Máquina Virtual) KVM usando o <systemitem class="library">libvirt</systemitem>, conforme descrito em <link xlink:href="https://documentation.suse.com/sles/15-SP2/html/SLES-all/cha-kvm-inst.html#sec-libvirt-inst-virt-install"/>. Use o armazenamento compartilhado pré-configurado para armazenar as imagens de disco da VM.
     </para>
    </step>
    <step>
@@ -94,7 +94,7 @@
    </step>
    <step>
     <para>
-     Crie um recurso para a VM do Nó de Admin. Consulte <link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/single-html/SLE-HA-guide/#cha-conf-hawk2"/> para obter informações gerais sobre a criação de recursos de HA. Há informações detalhadas sobre a criação de recursos para uma máquina virtual KVM descritas em <link xlink:href="http://www.linux-ha.org/wiki/VirtualDomain_%28resource_agent%29"/>.
+     Crie um recurso para a VM do Nó de Admin. Consulte <link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/html/SLE-HA-all/cha-conf-hawk2.html"/> para obter informações gerais sobre a criação de recursos de HA. Há informações detalhadas sobre a criação de recursos para uma máquina virtual KVM descritas em <link xlink:href="http://www.linux-ha.org/wiki/VirtualDomain_%28resource_agent%29"/>.
     </para>
    </step>
    <step>
