--- a/l10n/ses/zh-cn/xml/admin_ceph_iscsi.xml
+++ b/l10n/ses/zh-cn/xml/admin_ceph_iscsi.xml
@@ -38,7 +38,7 @@
     </listitem>
    </itemizedlist>
    <para>
-    如果发起程序主机运行 SUSE Linux Enterprise Server，请参见 <link xlink:href="https://documentation.suse.com/sles/15-SP1/single-html/SLES-storage/#sec-iscsi-initiator"/> 了解有关如何连接 iSCSI 目标的详细信息。
+    如果发起程序主机运行 SUSE Linux Enterprise Server，请参见 <link xlink:href="https://documentation.suse.com/sles/15-SP2/html/SLES-all/cha-iscsi.html#sec-iscsi-initiator"/> 了解有关如何连接 iSCSI 目标的详细信息。
    </para>
    <para>
     对于支持 <systemitem>open-iscsi</systemitem> 的任何其他 Linux 发行套件，请继续发现 <systemitem class="daemon">ceph-iscsi</systemitem> 网关上的目标（本示例使用 iscsi1.example.com 作为端口地址；对于多路径访问，请使用 iscsi2.example.com 重复这些步骤）：
