--- a/l10n/ses/zh-cn/xml/admin_ceph_kvm.xml
+++ b/l10n/ses/zh-cn/xml/admin_ceph_kvm.xml
@@ -11,7 +11,7 @@
   最常见的 Ceph 用例涉及到向虚拟机提供块设备映像。例如，在理想的配置中，用户可以创建包含 OS 和所有相关软件的“黄金”映像。然后，用户可以创建该映像的快照。最后，用户可以克隆该快照（通常要克隆多次，有关详细信息，请参见<xref linkend="cha-ceph-snapshots-rbd"/>）。能够创建快照的写入时复制克隆，就意味着 Ceph 能够快速向虚拟机供应块设备映像，因为客户端不需要在每次运转新的虚拟机时都下载整个映像。
  </para>
  <para>
-  Ceph 块设备可与 QEMU 虚拟机集成。有关 QEMU KVM 的详细信息，请参见 <link xlink:href="https://documentation.suse.com/sles/15-SP1/single-html/SLES-virtualization/#part-virt-qemu"/>。
+  Ceph 块设备可与 QEMU 虚拟机集成。有关 QEMU KVM 的详细信息，请参见 <link xlink:href="https://documentation.suse.com/sles/15-SP2/html/SLES-all/part-virt-qemu.html"/>。
  </para>
  <sect1 xml:id="ceph-kvm-install">
   <title>安装 <systemitem>qemu-block-rbd</systemitem></title>
