--- a/l10n/ses/zh-cn/xml/admin_ceph_upgrade.xml
+++ b/l10n/ses/zh-cn/xml/admin_ceph_upgrade.xml
@@ -50,12 +50,12 @@
   <itemizedlist>
    <listitem>
     <para>
-     <emphasis>必须</emphasis>在升级前执行从 FileStore 到 BlueStore 的 OSD 迁移，因为 FileStore 在 SUSE Enterprise Storage 7 中不受支持。有关 BlueStore 以及如何从 FileStore 迁移的更多详细信息，请参见 <link xlink:href="https://documentation.suse.com/ses/6/single-html/ses-deployment/#filestore2bluestore"/>。
+     <emphasis>必须</emphasis>在升级前执行从 FileStore 到 BlueStore 的 OSD 迁移，因为 FileStore 在 SUSE Enterprise Storage 7 中不受支持。有关 BlueStore 以及如何从 FileStore 迁移的更多详细信息，请参见 <link xlink:href="https://documentation.suse.com/ses/6/html/ses-all/cha-ceph-upgrade.html#filestore2bluestore"/>。
     </para>
    </listitem>
    <listitem>
     <para>
-     如果您运行的是仍在使用 <literal>ceph-disk</literal> OSD 的旧集群，则<emphasis>需要</emphasis>在升级前切换到 <literal>ceph-volume</literal>。有关详细信息，请参见<link xlink:href="https://documentation.suse.com/ses/6/single-html/ses-deployment/#upgrade-osd-deployment"/>。
+     如果您运行的是仍在使用 <literal>ceph-disk</literal> OSD 的旧集群，则<emphasis>需要</emphasis>在升级前切换到 <literal>ceph-volume</literal>。有关详细信息，请参见<link xlink:href="https://documentation.suse.com/ses/6/html/ses-all/cha-ceph-upgrade.html#upgrade-osd-deployment"/>。
     </para>
    </listitem>
   </itemizedlist>
@@ -143,7 +143,7 @@
   <sect2 xml:id="upgrade-backup-config-data">
    <title>备份集群配置和数据</title>
    <para>
-    强烈建议您在开始升级到 SUSE Enterprise Storage 7 之前备份所有集群配置和数据。有关如何备份所有数据的说明，请参见 <link xlink:href="https://documentation.suse.com/ses/6/single-html/ses-admin/#cha-deployment-backup"/>。
+    强烈建议您在开始升级到 SUSE Enterprise Storage 7 之前备份所有集群配置和数据。有关如何备份所有数据的说明，请参见 <link xlink:href="https://documentation.suse.com/ses/6/html/ses-all/cha-deployment-backup.html"/>。
    </para>
   </sect2>
 
