--- a/l10n/ses/zh-cn/xml/deploy_cephadm.xml
+++ b/l10n/ses/zh-cn/xml/deploy_cephadm.xml
@@ -80,7 +80,7 @@
    </step>
    <step>
     <para>
-     在每个节点上配置网络设置，包括正确的 DNS 名称解析。有关配置网络的详细信息，请参见 <link xlink:href="https://documentation.suse.com/sles/15-SP2/single-html/SLES-admin/#sec-network-yast"/>。有关配置 DNS 服务器的详细信息，请参见 <link xlink:href="https://documentation.suse.com/sles/15-SP2/single-html/SLES-admin/#cha-dns"/>。
+     在每个节点上配置网络设置，包括正确的 DNS 名称解析。有关配置网络的详细信息，请参见 <link xlink:href="https://documentation.suse.com/sles/15-SP2/html/SLES-all/cha-network.html#sec-network-yast"/>。有关配置 DNS 服务器的详细信息，请参见 <link xlink:href="https://documentation.suse.com/sles/15-SP2/html/SLES-all/cha-dns.html"/>。
     </para>
    </step>
   </procedure>
