--- a/l10n/ses/zh-cn/xml/deployment_admin_ha.xml
+++ b/l10n/ses/zh-cn/xml/deployment_admin_ha.xml
@@ -46,7 +46,7 @@
   </itemizedlist>
 
   <para>
-   有关集群要求的更多详细信息，请访问 <link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/single-html/SLE-HA-install-quick/#sec-ha-inst-quick-req"/>。
+   有关集群要求的更多详细信息，请访问 <link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/html/SLE-HA-all/art-sleha-install-quick.html#sec-ha-inst-quick-req"/>。
   </para>
 
   <figure>
@@ -71,17 +71,17 @@
   <procedure>
    <step>
     <para>
-     设置一个具有共享存储的基本双节点 HA 集群，如 <link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/single-html/SLE-HA-install-quick/#art-sleha-install-quick"/> 中所述。
+     设置一个具有共享存储的基本双节点 HA 集群，如 <link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/html/SLE-HA-all/art-sleha-install-quick.html"/> 中所述。
     </para>
    </step>
    <step>
     <para>
-     在两个集群节点上，安装运行 KVM 超级管理程序和 <systemitem class="library">libvirt</systemitem> 工具包所需的所有程序包，如 <link xlink:href="https://documentation.suse.com/sles/15-SP2/single-html/SLES-virtualization/#sec-vt-installation-kvm"/> 中所述。
+     在两个集群节点上，安装运行 KVM 超级管理程序和 <systemitem class="library">libvirt</systemitem> 工具包所需的所有程序包，如 <link xlink:href="https://documentation.suse.com/sles/15-SP2/html/SLES-all/cha-vt-installation.html#sec-vt-installation-kvm"/> 中所述。
     </para>
    </step>
    <step>
     <para>
-     在第一个集群节点上，使用 <systemitem class="library">libvirt</systemitem> 创建新的 KVM 虚拟机 (VM)，如 <link xlink:href="https://documentation.suse.com/sles/15-SP2/single-html/SLES-virtualization/#sec-libvirt-inst-virt-install"/> 中所述。使用预配置的共享存储来存储 VM 的磁盘映像。
+     在第一个集群节点上，使用 <systemitem class="library">libvirt</systemitem> 创建新的 KVM 虚拟机 (VM)，如 <link xlink:href="https://documentation.suse.com/sles/15-SP2/html/SLES-all/cha-kvm-inst.html#sec-libvirt-inst-virt-install"/> 中所述。使用预配置的共享存储来存储 VM 的磁盘映像。
     </para>
    </step>
    <step>
@@ -94,7 +94,7 @@
    </step>
    <step>
     <para>
-     为管理节点 VM 创建资源。有关创建 HA 资源的一般信息，请参见 <link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/single-html/SLE-HA-guide/#cha-conf-hawk2"/>。<link xlink:href="http://www.linux-ha.org/wiki/VirtualDomain_%28resource_agent%29"/> 中提供了有关为 KVM 虚拟机创建资源的详细信息。
+     为管理节点 VM 创建资源。有关创建 HA 资源的一般信息，请参见 <link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/html/SLE-HA-all/cha-conf-hawk2.html"/>。<link xlink:href="http://www.linux-ha.org/wiki/VirtualDomain_%28resource_agent%29"/> 中提供了有关为 KVM 虚拟机创建资源的详细信息。
     </para>
    </step>
    <step>
