--- a/l10n/ses/zh-cn/xml/deployment_cifs.xml
+++ b/l10n/ses/zh-cn/xml/deployment_cifs.xml
@@ -182,7 +182,7 @@
     此外，使用两个浮动虚拟 IP 地址可让客户端连接到服务，不管该服务在哪个物理节点上运行均如此。<systemitem class="ipaddress">192.168.1.10</systemitem> 用于通过 Hawk2 进行集群管理，<systemitem class="ipaddress">192.168.2.1</systemitem> 专门用于 CIFS 导出。这样，以后便可更轻松地应用安全限制。
    </para>
    <para>
-    以下过程介绍示例安装。<link xlink:href="https://documentation.suse.com/sle-ha/15-SP1/single-html/SLE-HA-install-quick/"/> 上提供了更多详细信息。
+    以下过程介绍示例安装。<link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/html/SLE-HA-all/art-sleha-install-quick.html"/> 上提供了更多详细信息。
    </para>
    <procedure xml:id="proc-sec-ses-cifs-ha">
     <step>
@@ -196,7 +196,7 @@
     </step>
     <step>
      <para>
-      SLE-HA 设置需要一个隔离设备，以避免在活动集群节点变为未同步时出现<emphasis>节点分裂</emphasis>情况。为此，您可以将 Ceph RBD 映像与 Stonith 块设备 (SBD) 搭配使用。有关更多详细信息，请参见 <link xlink:href="https://documentation.suse.com/sle-ha/15-SP1/single-html/SLE-HA-guide/#sec-ha-storage-protect-fencing-setup"/>。
+      SLE-HA 设置需要一个隔离设备，以避免在活动集群节点变为未同步时出现<emphasis>节点分裂</emphasis>情况。为此，您可以将 Ceph RBD 映像与 Stonith 块设备 (SBD) 搭配使用。有关更多详细信息，请参见 <link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/html/SLE-HA-all/cha-ha-storage-protect.html#sec-ha-storage-protect-fencing-setup"/>。
      </para>
      <para>
       如果该映像尚不存在，则创建一个名为 <literal>rbd</literal> 的 RBD 存储池（参见<xref linkend="ceph-pools-operate-add-pool"/>），并将其与 <literal>rbd</literal> 相关联（参见<xref linkend="ceph-pools-associate"/>）。然后创建一个名为 <literal>sbd01</literal> 的相关 RBD 映像：
@@ -408,7 +408,7 @@ Full list of resources:
 <prompt>crm(live)configure# </prompt><command>order</command> o-with-ctdb 0: cl-ip cl-ctdb
 <prompt>crm(live)configure# </prompt><command>commit</command></screen>
      <para>
-      如果 <literal>unique_clone_address</literal> 设置为 <literal>true</literal>，IPaddr2 资源代理将向指定的地址添加一个克隆 ID，从而导致出现三个不同的 IP 地址。这些地址通常是不需要的，但有助于实现负载平衡。有关此主题的更多信息，请参见 <link xlink:href="https://documentation.suse.com/sle-ha/15-SP1/single-html/SLE-HA-guide/#cha-ha-lb"/>。
+      如果 <literal>unique_clone_address</literal> 设置为 <literal>true</literal>，IPaddr2 资源代理将向指定的地址添加一个克隆 ID，从而导致出现三个不同的 IP 地址。这些地址通常是不需要的，但有助于实现负载平衡。有关此主题的更多信息，请参见 <link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/html/SLE-HA-all/cha-ha-lb.html"/>。
      </para>
     </step>
     <step>
