--- a/l10n/ses/zh-tw/xml/admin_ceph_iscsi.xml
+++ b/l10n/ses/zh-tw/xml/admin_ceph_iscsi.xml
@@ -38,7 +38,7 @@
     </listitem>
    </itemizedlist>
    <para>
-    如果啟動器主機執行 SUSE Linux Enterprise Server，請參閱 <link xlink:href="https://documentation.suse.com/sles/15-SP1/single-html/SLES-storage/#sec-iscsi-initiator"/> 以瞭解有關如何連接至 iSCSI 目標的詳細資料。
+    如果啟動器主機執行 SUSE Linux Enterprise Server，請參閱 <link xlink:href="https://documentation.suse.com/sles/15-SP2/html/SLES-all/cha-iscsi.html#sec-iscsi-initiator"/> 以瞭解有關如何連接至 iSCSI 目標的詳細資料。
    </para>
    <para>
     對於支援 <systemitem>open-iscsi</systemitem> 的任何其他 Linux 套裝作業系統，請繼續探查 <systemitem class="daemon">ceph-iscsi</systemitem> 閘道上的目標 (本範例使用 iscsi1.example.com 做為入口網站位址；對於多重路徑存取，請使用 iscsi2.example.com 重複這些步驟)：
