--- a/l10n/ses/zh-tw/xml/admin_ceph_kvm.xml
+++ b/l10n/ses/zh-tw/xml/admin_ceph_kvm.xml
@@ -11,7 +11,7 @@
   最常見的 Ceph 使用案例涉及到向虛擬機器提供區塊裝置影像。例如，在理想的組態中，使用者可以建立包含 OS 和所有相關軟體的「黃金」影像。然後，使用者可以建立該影像的快照。最後，使用者可以複製該快照 (通常要複製多次，如需詳細資料，請參閱<xref linkend="cha-ceph-snapshots-rbd"/>)。能夠建立快照的寫入時複製複製品，就表示 Ceph 能夠快速向虛擬機器佈建區塊裝置影像，因為用戶端不需要在每次運轉新的虛擬機器時都下載整個影像。
  </para>
  <para>
-  Ceph 區塊裝置可與 QEMU 虛擬機器相整合。如需 QEMU KVM 的詳細資訊，請參閱 <link xlink:href="https://documentation.suse.com/sles/15-SP1/single-html/SLES-virtualization/#part-virt-qemu"/>。
+  Ceph 區塊裝置可與 QEMU 虛擬機器相整合。如需 QEMU KVM 的詳細資訊，請參閱 <link xlink:href="https://documentation.suse.com/sles/15-SP2/html/SLES-all/part-virt-qemu.html"/>。
  </para>
  <sect1 xml:id="ceph-kvm-install">
   <title>安裝 <systemitem>qemu-block-rbd</systemitem></title>
