--- a/l10n/ses/zh-tw/xml/admin_ceph_upgrade.xml
+++ b/l10n/ses/zh-tw/xml/admin_ceph_upgrade.xml
@@ -50,12 +50,12 @@
   <itemizedlist>
    <listitem>
     <para>
-     <emphasis>必須</emphasis>在升級前執行從 FileStore 到 BlueStore 的 OSD 移轉，因為 FileStore 在 SUSE Enterprise Storage 7 中不受支援。如需 BlueStore 以及如何從 FileStore 移轉的更多詳細資料，請參閱 <link xlink:href="https://documentation.suse.com/ses/6/single-html/ses-deployment/#filestore2bluestore"/>。
+     <emphasis>必須</emphasis>在升級前執行從 FileStore 到 BlueStore 的 OSD 移轉，因為 FileStore 在 SUSE Enterprise Storage 7 中不受支援。如需 BlueStore 以及如何從 FileStore 移轉的更多詳細資料，請參閱 <link xlink:href="https://documentation.suse.com/ses/6/html/ses-all/cha-ceph-upgrade.html#filestore2bluestore"/>。
     </para>
    </listitem>
    <listitem>
     <para>
-     如果您執行的是仍在使用 <literal>ceph-disk</literal> OSD 的舊叢集，則<emphasis>需要</emphasis>在升級前切換到 <literal>ceph-volume</literal>。如需更多詳細資料，請參閱<link xlink:href="https://documentation.suse.com/ses/6/single-html/ses-deployment/#upgrade-osd-deployment"/>。
+     如果您執行的是仍在使用 <literal>ceph-disk</literal> OSD 的舊叢集，則<emphasis>需要</emphasis>在升級前切換到 <literal>ceph-volume</literal>。如需更多詳細資料，請參閱<link xlink:href="https://documentation.suse.com/ses/6/html/ses-all/cha-ceph-upgrade.html#upgrade-osd-deployment"/>。
     </para>
    </listitem>
   </itemizedlist>
@@ -143,7 +143,7 @@
   <sect2 xml:id="upgrade-backup-config-data">
    <title>備份叢集組態和資料</title>
    <para>
-    強烈建議您在開始升級至 SUSE Enterprise Storage 7 之前，備份所有叢集組態和資料。如需如何備份所有資料的說明，請參閱 <link xlink:href="https://documentation.suse.com/ses/6/single-html/ses-admin/#cha-deployment-backup"/>。
+    強烈建議您在開始升級至 SUSE Enterprise Storage 7 之前，備份所有叢集組態和資料。如需如何備份所有資料的說明，請參閱 <link xlink:href="https://documentation.suse.com/ses/6/html/ses-all/cha-deployment-backup.html"/>。
    </para>
   </sect2>
 
