--- a/l10n/ses/zh-tw/xml/deploy_cephadm.xml
+++ b/l10n/ses/zh-tw/xml/deploy_cephadm.xml
@@ -80,7 +80,7 @@
    </step>
    <step>
     <para>
-     在每個節點上設定網路設定，包括正確的 DNS 名稱解析。如需設定網路的詳細資訊，請參閱 <link xlink:href="https://documentation.suse.com/sles/15-SP2/single-html/SLES-admin/#sec-network-yast"/>。如需設定 DNS 伺服器的詳細資訊，請參閱 <link xlink:href="https://documentation.suse.com/sles/15-SP2/single-html/SLES-admin/#cha-dns"/>。
+     在每個節點上設定網路設定，包括正確的 DNS 名稱解析。如需設定網路的詳細資訊，請參閱 <link xlink:href="https://documentation.suse.com/sles/15-SP2/html/SLES-all/cha-network.html#sec-network-yast"/>。如需設定 DNS 伺服器的詳細資訊，請參閱 <link xlink:href="https://documentation.suse.com/sles/15-SP2/html/SLES-all/cha-dns.html"/>。
     </para>
    </step>
   </procedure>
