--- a/l10n/ses/zh-tw/xml/deployment_admin_ha.xml
+++ b/l10n/ses/zh-tw/xml/deployment_admin_ha.xml
@@ -46,7 +46,7 @@
   </itemizedlist>
 
   <para>
-   如需叢集要求的更多詳細資料，請造訪 <link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/single-html/SLE-HA-install-quick/#sec-ha-inst-quick-req"/>。
+   需叢集要求的更多詳細資料，請造訪 <link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/html/SLE-HA-all/art-sleha-install-quick.html#sec-ha-inst-quick-req"/>。
   </para>
 
   <figure>
@@ -71,17 +71,17 @@
   <procedure>
    <step>
     <para>
-     設定一個具有共用儲存的基本雙節點 HA 叢集，如 <link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/single-html/SLE-HA-install-quick/#art-sleha-install-quick"/> 中所述。
+     設定一個具有共用儲存的基本雙節點 HA 叢集，如 <link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/html/SLE-HA-all/art-sleha-install-quick.html"/> 中所述。
     </para>
    </step>
    <step>
     <para>
-     在兩個叢集節點上，安裝執行 KVM 監管程式和 <systemitem class="library">libvirt</systemitem> 工具套件所需的所有套件，如 <link xlink:href="https://documentation.suse.com/sles/15-SP2/single-html/SLES-virtualization/#sec-vt-installation-kvm"/> 中所述。
+     在兩個叢集節點上，安裝執行 KVM 監管程式和 <systemitem class="library">libvirt</systemitem> 工具套件所需的所有套件，如 <link xlink:href="https://documentation.suse.com/sles/15-SP2/html/SLES-all/cha-vt-installation.html#sec-vt-installation-kvm"/> 中所述。
     </para>
    </step>
    <step>
     <para>
-     在第一個叢集節點上，使用 <systemitem class="library">libvirt</systemitem> 建立新的 KVM 虛擬機器 (VM)，如 <link xlink:href="https://documentation.suse.com/sles/15-SP2/single-html/SLES-virtualization/#sec-libvirt-inst-virt-install"/> 中所述。使用預先設定的共用儲存來儲存虛擬機器的磁碟影像。
+     在第一個叢集節點上，使用 <systemitem class="library">libvirt</systemitem> 建立新的 KVM 虛擬機器 (VM)，如 <link xlink:href="https://documentation.suse.com/sles/15-SP2/html/SLES-all/cha-kvm-inst.html#sec-libvirt-inst-virt-install"/> 中所述。使用預先設定的共用儲存來儲存虛擬機器的磁碟影像。
     </para>
    </step>
    <step>
@@ -94,7 +94,7 @@
    </step>
    <step>
     <para>
-     為管理節點虛擬機器建立資源。如需建立 HA 資源的一般資訊，請參閱 <link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/single-html/SLE-HA-guide/#cha-conf-hawk2"/>。<link xlink:href="http://www.linux-ha.org/wiki/VirtualDomain_%28resource_agent%29"/> 中提供了有關為 KVM 虛擬機器建立資源的詳細資訊。
+     為管理節點虛擬機器建立資源。如需建立 HA 資源的一般資訊，請參閱 <link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/html/SLE-HA-all/cha-conf-hawk2.html"/>。<link xlink:href="http://www.linux-ha.org/wiki/VirtualDomain_%28resource_agent%29"/> 中提供了有關為 KVM 虛擬機器建立資源的詳細資訊。
     </para>
    </step>
    <step>
