--- a/l10n/ses/zh-tw/xml/deployment_cifs.xml
+++ b/l10n/ses/zh-tw/xml/deployment_cifs.xml
@@ -182,7 +182,7 @@
     此外，使用兩個浮動的虛擬 IP 位址可讓用戶端連接到服務，而不管該服務在哪個實體節點上執行。<systemitem class="ipaddress">192.168.1.10</systemitem> 用於透過 Hawk2 進行叢集管理，<systemitem class="ipaddress">192.168.2.1</systemitem> 專門用於 CIFS 輸出。如此可讓日後能更輕鬆地套用安全性限制。
    </para>
    <para>
-    以下程序說明範例安裝。<link xlink:href="https://documentation.suse.com/sle-ha/15-SP1/single-html/SLE-HA-install-quick/"/> 上提供了更多詳細資料。
+    以下程序說明範例安裝。<link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/html/SLE-HA-all/art-sleha-install-quick.html"/> 上提供了更多詳細資料。
    </para>
    <procedure xml:id="proc-sec-ses-cifs-ha">
     <step>
@@ -196,7 +196,7 @@
     </step>
     <step>
      <para>
-      SLE-HA 設定需要一個圍籬區隔裝置，以避免在使用中叢集節點變為未同步時出現<emphasis>電腦分裂</emphasis>情況。為此，您可以將 Ceph RBD 影像與 Stonith 區塊裝置 (SBD) 結合使用。如需更多詳細資料，請參閱 <link xlink:href="https://documentation.suse.com/sle-ha/15-SP1/single-html/SLE-HA-guide/#sec-ha-storage-protect-fencing-setup"/>。
+      SLE-HA 設定需要一個圍籬區隔裝置，以避免在使用中叢集節點變為未同步時出現<emphasis>電腦分裂</emphasis>情況。為此，您可以將 Ceph RBD 影像與 Stonith 區塊裝置 (SBD) 結合使用。如需更多詳細資料，請參閱 <link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/html/SLE-HA-all/cha-ha-storage-protect.html#sec-ha-storage-protect-fencing-setup"/>。
      </para>
      <para>
       如果該影像尚不存在，請建立一個名為 <literal>rbd</literal> 的 RBD 池 (參閱<xref linkend="ceph-pools-operate-add-pool"/>)，並將其與 <literal>rbd</literal> 相關聯 (參閱<xref linkend="ceph-pools-associate"/>)。然後建立一個名為 <literal>sbd01</literal> 的相關 RBD 影像：
@@ -408,7 +408,7 @@ Full list of resources:
 <prompt>crm(live)configure# </prompt><command>order</command> o-with-ctdb 0: cl-ip cl-ctdb
 <prompt>crm(live)configure# </prompt><command>commit</command></screen>
      <para>
-      如果 <literal>unique_clone_address</literal> 設定為 <literal>true</literal>，IPaddr2 資源代辦會向指定的位址新增一個複製品 ID，從而導致出現三個不同的 IP 位址。這些位址通常是不需要的，但有助於實現負載平衡。如需有關此主題的詳細資訊，請參閱 <link xlink:href="https://documentation.suse.com/sle-ha/15-SP1/single-html/SLE-HA-guide/#cha-ha-lb"/>。
+      如果 <literal>unique_clone_address</literal> 設定為 <literal>true</literal>，IPaddr2 資源代辦會向指定的位址新增一個複製品 ID，從而導致出現三個不同的 IP 位址。這些位址通常是不需要的，但有助於實現負載平衡。如需有關此主題的詳細資訊，請參閱 <link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/html/SLE-HA-all/cha-ha-lb.html"/>。
      </para>
     </step>
     <step>
