--- a/l10n/ses/es-es/xml/deployment_admin_ha.xml
+++ b/l10n/ses/es-es/xml/deployment_admin_ha.xml
@@ -46,7 +46,7 @@
   </itemizedlist>
 
   <para>
-   Encontrará más información sobre los requisitos del clúster en <link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/single-html/SLE-HA-install-quick/#sec-ha-inst-quick-req"/>.
+   Encontrará más información sobre los requisitos del clúster en <link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/html/SLE-HA-all/art-sleha-install-quick.html#sec-ha-inst-quick-req"/>.
   </para>
 
   <figure>
@@ -71,17 +71,17 @@
   <procedure>
    <step>
     <para>
-     Configure un clúster de alta disponibilidad básico de 2 nodos con almacenamiento compartido, como se describe en <link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/single-html/SLE-HA-install-quick/#art-sleha-install-quick"/>.
+     Configure un clúster de alta disponibilidad básico de 2 nodos con almacenamiento compartido, como se describe en <link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/html/SLE-HA-all/art-sleha-install-quick.html"/>.
     </para>
    </step>
    <step>
     <para>
-     En ambos nodos del clúster, instale todos los paquetes necesarios para ejecutar el hipervisor KVM y el kit de herramientas <systemitem class="library">libvirt</systemitem>, como se describe en <link xlink:href="https://documentation.suse.com/sles/15-SP2/single-html/SLES-virtualization/#sec-vt-installation-kvm"/>.
+     En ambos nodos del clúster, instale todos los paquetes necesarios para ejecutar el hipervisor KVM y el kit de herramientas <systemitem class="library">libvirt</systemitem>, como se describe en <link xlink:href="https://documentation.suse.com/sles/15-SP2/html/SLES-all/cha-vt-installation.html#sec-vt-installation-kvm"/>.
     </para>
    </step>
    <step>
     <para>
-     En el primer nodo del clúster, cree una máquina virtual KVM nueva mediante <systemitem class="library">libvirt</systemitem>, como se describe en <link xlink:href="https://documentation.suse.com/sles/15-SP2/single-html/SLES-virtualization/#sec-libvirt-inst-virt-install"/>. Utilice el almacenamiento compartido preconfigurado para almacenar las imágenes de disco de la máquina virtual.
+     En el primer nodo del clúster, cree una máquina virtual KVM nueva mediante <systemitem class="library">libvirt</systemitem>, como se describe en <link xlink:href="https://documentation.suse.com/sles/15-SP2/html/SLES-all/cha-kvm-inst.html#sec-libvirt-inst-virt-install"/>. Utilice el almacenamiento compartido preconfigurado para almacenar las imágenes de disco de la máquina virtual.
     </para>
    </step>
    <step>
@@ -94,7 +94,7 @@
    </step>
    <step>
     <para>
-     Cree un recurso para la máquina virtual del nodo de administración. Consulte <link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/single-html/SLE-HA-guide/#cha-conf-hawk2"/> para obtener información general sobre cómo crear recursos de alta disponibilidad. Encontrará información detallada sobre cómo crear recursos para una máquina virtual KVM en <link xlink:href="http://www.linux-ha.org/wiki/VirtualDomain_%28resource_agent%29"/>.
+     Cree un recurso para la máquina virtual del nodo de administración. Consulte <link xlink:href="https://documentation.suse.com/sle-ha/15-SP2/html/SLE-HA-all/cha-conf-hawk2.html"/> para obtener información general sobre cómo crear recursos de alta disponibilidad. Encontrará información detallada sobre cómo crear recursos para una máquina virtual KVM en <link xlink:href="http://www.linux-ha.org/wiki/VirtualDomain_%28resource_agent%29"/>.
     </para>
    </step>
    <step>
