--- a/l10n/ses/fr-fr/xml/bp_troubleshooting_report.xml
+++ b/l10n/ses/fr-fr/xml/bp_troubleshooting_report.xml
@@ -54,7 +54,7 @@
   Although you can use <command>supportconfig</command> on the command line, we
   recommend using the related YaST module. Find more information about
   <command>supportconfig</command> in
-  <link xlink:href="https://documentation.suse.com/sles/15-SP1/single-html/SLES-admin/#sec-admsupport-supportconfig"/>.
+  <link xlink:href="https://documentation.suse.com/sles/15-SP2/html/SLES-all/cha-adm-support.html#sec-admsupport-supportconfig"/>.
  </para>
  <para/>
 </chapter>
