--- a/l10n/ses/it-it/xml/admin_ceph_kvm.xml
+++ b/l10n/ses/it-it/xml/admin_ceph_kvm.xml
@@ -11,7 +11,7 @@
   Il caso di utilizzo Ceph più frequente riguarda l'inserimento di immagini di dispositivi di blocco nelle macchine virtuali. Ad esempio, un utente può creare un'immagine "golden" con un sistema operativo e qualsiasi software pertinente in una configurazione ideale. L'utente, quindi, effettua uno snapshot dell'immagine. Infine, l'utente clona lo snapshot (di solito molte volte, vedere <xref linkend="cha-ceph-snapshots-rbd"/> per ulteriori informazioni). La capacità di creare cloni copia su scrittura di uno snapshot significa che Ceph è in grado di fornire rapidamente immagini di dispositivi di blocco alle macchine virtuali, perché il client non deve effettuare il download di un'immagine intera ogni volta che esegue lo spin-up di una nuova macchina virtuale.
  </para>
  <para>
-  I dispositivi di blocco Ceph possono essere integrati con le macchine virtuali QEMU. Per ulteriori informazioni su QEMU KVM, vedere <link xlink:href="https://documentation.suse.com/sles/15-SP1/single-html/SLES-virtualization/#part-virt-qemu"/> (in lingua inglese).
+  I dispositivi di blocco Ceph possono essere integrati con le macchine virtuali QEMU. Per ulteriori informazioni su QEMU KVM, vedere <link xlink:href="https://documentation.suse.com/sles/15-SP2/html/SLES-all/part-virt-qemu.html"/> (in lingua inglese).
  </para>
  <sect1 xml:id="ceph-kvm-install">
   <title>Installazione di <systemitem>qemu-block-rbd</systemitem></title>
