--- a/l10n/ses/ja-jp/xml/deploy_caasp.xml
+++ b/l10n/ses/ja-jp/xml/deploy_caasp.xml
@@ -84,7 +84,7 @@
     <para>
      Installation of SUSE CaaS Platform 4.5. See the SUSE CaaS Platform documentation for more
      details on how to install:
-     <link xlink:href="https://documentation.suse.com/en-us/suse-caasp/4.5/single-html/caasp-deployment/"/>.
+     <link xlink:href="https://documentation.suse.com/en-us/suse-caasp/4.5/"/>.
     </para>
    </listitem>
    <listitem>
@@ -131,7 +131,7 @@
    <para>
     The following instructions are designed for a quick start deployment only.
     For more information on installing Helm, see
-    <link xlink:href="https://documentation.suse.com/en-us/suse-caasp/4.5/single-html/caasp-admin/#helm-tiller-install"/>.
+    <link xlink:href="https://documentation.suse.com/en-us/suse-caasp/4.5/"/>.
    </para>
   </note>
 
@@ -299,7 +299,7 @@
    <title>Configure CephFS</title>
    <para>
     For more information on configuring CephFS, see
-    <link xlink:href="https://documentation.suse.com/suse-caasp/4.5/single-html/caasp-admin/#_using_cephfs_in_a_pod"/>
+    <link xlink:href="https://documentation.suse.com/en-us/suse-caasp/4.5/"/>
     for steps and more information. This section will also provide the
     necessary procedure on attaching a pod to either an CephFS static or
     dynamic volume.
@@ -311,7 +311,7 @@
    <para>
     For instructions on configuring the RADOS Block Device (RBD) in a pod,
     see
-    <link xlink:href="https://documentation.suse.com/suse-caasp/4.5/single-html/caasp-admin/#_using_rbd_in_a_pod"/>
+    <link xlink:href="https://documentation.suse.com/en-us/suse-caasp/4.5/"/>
     for more information. This section will also provide the necessary
     procedure on attaching a pod to either an RBD static or dynamic volume.
    </para>
